fix escaping < and >, regenerate pot and po files
git-svn-id: file:///srv/svn/publican/trunk@1506 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/datadir/Common_Content/common/ast-ES/Conventions.po
+++ b/publican/datadir/Common_Content/common/ast-ES/Conventions.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: conventions\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2010-09-28T06:49:34\n"
+"POT-Creation-Date: 2010-09-29T05:30:03\n"
 "PO-Revision-Date: 2009-10-30 22:18+0100\n"
 "Last-Translator: astur <malditoastur@gmail.com>\n"
 "Language-Team: asturian <alministradores@softastur.org>\n"
@@ -106,7 +106,7 @@ msgstr "Escueyi <guimenu>Sistema > Preferencies > Mur</guimenu> dende'l menú pr
 
 #. Tag: para
 #, fuzzy, no-c-format
-msgid "To insert a special character into a <application>gedit</application> file, choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</guisubmenu><guimenuitem>Character Map</guimenuitem></menuchoice> from the main menu bar. Next, choose <menuchoice><guimenu>Search</guimenu><guimenuitem>Find&amp;hellip;</guimenuitem></menuchoice> from the <application>Character Map</application> menu bar, type the name of the character in the <guilabel>Search</guilabel> field and click <guibutton>Next</guibutton>. The character you sought will be highlighted in the <guilabel>Character Table</guilabel>. Double-click this highlighted character to place it in the <guilabel>Text to copy</guilabel> field and then click the <guibutton>Copy</guibutton> button. Now switch back to your document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
+msgid "To insert a special character into a <application>gedit</application> file, choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</guisubmenu><guimenuitem>Character Map</guimenuitem></menuchoice> from the main menu bar. Next, choose <menuchoice><guimenu>Search</guimenu><guimenuitem>Find&hellip;</guimenuitem></menuchoice> from the <application>Character Map</application> menu bar, type the name of the character in the <guilabel>Search</guilabel> field and click <guibutton>Next</guibutton>. The character you sought will be highlighted in the <guilabel>Character Table</guilabel>. Double-click this highlighted character to place it in the <guilabel>Text to copy</guilabel> field and then click the <guibutton>Copy</guibutton> button. Now switch back to your document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
 msgstr "Pa inxertar un carauter especial nún ficheru <application>gedit</application>, esbille dende la barra del menú principal <guimenu>Aplicaciones > Accesorios > Mapa de carauteres</guimenu>. Llueu, dende la barra del menú esbille <guimenu>Gueta > Atopar&hellip;</guimenu> <application>mapa de carauteres</application>, escribi'l nome del carauter nel campu de <guilabel>Gueta</guilabel> y fai clic en <guibutton>Siguiente</guibutton>. El carauter guetáu solliñaráse na <guilabel>Tabla de carauteres</guilabel>. Fai duble clic nesi carauter solliñáu p'allugalu nel campu de <guilabel>Testu pa copiar</guilabel> y llueu fai clic nel botón de <guibutton>Copiar</guibutton>. Agora vuelve al documentu y esbilla <guimenu>Editar > Apegar</guimenu> dende la barra de menú de <application>gedit</application>."
 
 #. Tag: para
@@ -141,7 +141,7 @@ msgstr "Pa saber la versitón d'un paquete instaláu, use'l comandu <command>rpm
 
 #. Tag: para
 #, fuzzy, no-c-format
-msgid "Note the words in bold italics above &amp;mdash; username, domain.name, file-system, package, version and release. Each word is a placeholder, either for text you enter when issuing a command or for text displayed by the system."
+msgid "Note the words in bold italics above &mdash; username, domain.name, file-system, package, version and release. Each word is a placeholder, either for text you enter when issuing a command or for text displayed by the system."
 msgstr "Decátese de les pallabres en negrina cursiva anteriores &mdash; nome_usuariu, nome.dominiu, sistema-ficheros, paquete, versión y llanzamientu. Cada pallabra ye un marcador de posición, yá seya pal testu que s'introduz al ordenar un comandu o pal testu amosáu pol sistema."
 
 #. Tag: para
