--- a/publican/datadir/Common_Content/common/bs-BA/Conventions.po
+++ b/publican/datadir/Common_Content/common/bs-BA/Conventions.po
@@ -1,11 +1,11 @@
 # Bosnian translations for Publican Conventions
 # Arnes Arnautović <arnes99@gmail.com>, 2009.
-# 
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: Conventions\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2010-09-28T06:49:34\n"
+"POT-Creation-Date: 2010-09-29T05:30:03\n"
 "PO-Revision-Date: 2009-05-08 11:51+0100\n"
 "Last-Translator: Arnes Arnautović <arnes99@gmail.com>\n"
 "Language-Team: Bosnian (bs) <fedora-trans-bs@redhat.com>\n"
@@ -106,7 +106,7 @@ msgstr "Odaberite <guimenu>Sistem &gt; Postavke &gt; Miš</guimenu> iz trake gla
 
 #. Tag: para
 #, fuzzy, no-c-format
-msgid "To insert a special character into a <application>gedit</application> file, choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</guisubmenu><guimenuitem>Character Map</guimenuitem></menuchoice> from the main menu bar. Next, choose <menuchoice><guimenu>Search</guimenu><guimenuitem>Find&amp;hellip;</guimenuitem></menuchoice> from the <application>Character Map</application> menu bar, type the name of the character in the <guilabel>Search</guilabel> field and click <guibutton>Next</guibutton>. The character you sought will be highlighted in the <guilabel>Character Table</guilabel>. Double-click this highlighted character to place it in the <guilabel>Text to copy</guilabel> field and then click the <guibutton>Copy</guibutton> button. Now switch back to your document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
+msgid "To insert a special character into a <application>gedit</application> file, choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</guisubmenu><guimenuitem>Character Map</guimenuitem></menuchoice> from the main menu bar. Next, choose <menuchoice><guimenu>Search</guimenu><guimenuitem>Find&hellip;</guimenuitem></menuchoice> from the <application>Character Map</application> menu bar, type the name of the character in the <guilabel>Search</guilabel> field and click <guibutton>Next</guibutton>. The character you sought will be highlighted in the <guilabel>Character Table</guilabel>. Double-click this highlighted character to place it in the <guilabel>Text to copy</guilabel> field and then click the <guibutton>Copy</guibutton> button. Now switch back to your document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
 msgstr "Da biste umetnuli poseban znak u <application>gedit</application> datoteku, odaberite <guimenu>Programi &gt; Alati &gt; Tablica znakova</guimenu> iz trake glavnog izbornika. Zatim, odaberite <guimenu>Pretraga &gt; Nađi&hellip;</guimenu> iz izbornika <application>Tablice znakova</application>, unesite naziv znaka u polju <guilabel>Pretraga</guilabel> i pritisnite <guibutton>Sljedeći</guibutton>. Znak koji ste tražili će biti istaknut u <guilabel>Tablici znakova</guilabel>. Pritisnite dvaput ovaj istaknuti znak kako biste ga smjestili u polje <guilabel>Tekst za kopiranje</guilabel> i potom pritisnite dugme <guibutton>Umnoži</guibutton>. Sada se prebacite nazad u vaš dokument i izaberite <guimenu>Uređivanje &gt; Ubaci</guimenu> iz trake <application>gedit</application> izbornika. "
 
 #. Tag: para
@@ -141,7 +141,7 @@ msgstr "Da biste vidjeli verziju trenutno instaliranog paketa, koristite naredbu
 
 #. Tag: para
 #, fuzzy, no-c-format
-msgid "Note the words in bold italics above &amp;mdash; username, domain.name, file-system, package, version and release. Each word is a placeholder, either for text you enter when issuing a command or for text displayed by the system."
+msgid "Note the words in bold italics above &mdash; username, domain.name, file-system, package, version and release. Each word is a placeholder, either for text you enter when issuing a command or for text displayed by the system."
 msgstr "Obratite pažnju na riječi ispisane podebljanim kurzivnim slovima iznad &mdash; korisnik, ime.domene, sistem-datoteka, paket, verzija i izdanje. Svaka riječ je čuvar mjesta, bilo za tekst koji ćete unijeti pri izdavanju naredbe ili za tekst kojeg prikazuje sistem."
 
 #. Tag: para
