--- a/publican/datadir/Common_Content/common/ca-ES/Conventions.po
+++ b/publican/datadir/Common_Content/common/ca-ES/Conventions.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Documentation 0.1\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2010-09-28T06:49:34\n"
+"POT-Creation-Date: 2010-09-29T05:30:03\n"
 "PO-Revision-Date: 2010-09-18 16:24+0100\n"
 "Last-Translator: Robert Antoni Buj Gelonch <robert.buj@gmail.com>\n"
 "Language-Team: Robert Buj <robert.buj@gmail.com>\n"
@@ -110,7 +110,7 @@ msgstr "Seleccioneu <menuchoice><guimenu>Sistema</guimenu><guisubmenu>Preferènc
 
 #. Tag: para
 #, fuzzy, no-c-format
-msgid "To insert a special character into a <application>gedit</application> file, choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</guisubmenu><guimenuitem>Character Map</guimenuitem></menuchoice> from the main menu bar. Next, choose <menuchoice><guimenu>Search</guimenu><guimenuitem>Find&amp;hellip;</guimenuitem></menuchoice> from the <application>Character Map</application> menu bar, type the name of the character in the <guilabel>Search</guilabel> field and click <guibutton>Next</guibutton>. The character you sought will be highlighted in the <guilabel>Character Table</guilabel>. Double-click this highlighted character to place it in the <guilabel>Text to copy</guilabel> field and then click the <guibutton>Copy</guibutton> button. Now switch back to your document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
+msgid "To insert a special character into a <application>gedit</application> file, choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</guisubmenu><guimenuitem>Character Map</guimenuitem></menuchoice> from the main menu bar. Next, choose <menuchoice><guimenu>Search</guimenu><guimenuitem>Find&hellip;</guimenuitem></menuchoice> from the <application>Character Map</application> menu bar, type the name of the character in the <guilabel>Search</guilabel> field and click <guibutton>Next</guibutton>. The character you sought will be highlighted in the <guilabel>Character Table</guilabel>. Double-click this highlighted character to place it in the <guilabel>Text to copy</guilabel> field and then click the <guibutton>Copy</guibutton> button. Now switch back to your document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
 msgstr "Per a insertar un caràcter especial en un fitxer amb <application>gedit</application>, seleccioneu des de la barra de menú principal <menuchoice><guimenu>Aplicacions</guimenu><guisubmenu>Accessoris</guisubmenu><guimenuitem>Mapa de caràcters</guimenuitem></menuchoice>. Després, des de la barra de menú <application>Mapa de caràcters</application> seleccioneu <menuchoice><guimenu>Cerca</guimenu><guimenuitem>Troba&hellip;</guimenuitem></menuchoice>, teclegeu el nom de caràcter al camp de <guilabel>Cerca</guilabel> i cliqueu <guibutton>Següent</guibutton>. El caràcter cercat es ressaltarà a la <guilabel>Taula de caràcters</guilabel>. Feu doble clic a aquest caràcter ressaltat per a col·locar-lo al camp de <guilabel>Text a copiar</guilabel> i després cliqueu al botó <guibutton>Copia</guibutton>. Ara torneu al document i seleccioneu <menuchoice><guimenu>Edita</guimenu><guimenuitem>Enganxa</guimenuitem></menuchoice> des de la barra de menú de <application>gedit</application>."
 
 #. Tag: para
@@ -145,7 +145,7 @@ msgstr "Per a visualitzar la versió d'un paquet actualment instal·lat, utilitz
 
 #. Tag: para
 #, fuzzy, no-c-format
-msgid "Note the words in bold italics above &amp;mdash; username, domain.name, file-system, package, version and release. Each word is a placeholder, either for text you enter when issuing a command or for text displayed by the system."
+msgid "Note the words in bold italics above &mdash; username, domain.name, file-system, package, version and release. Each word is a placeholder, either for text you enter when issuing a command or for text displayed by the system."
 msgstr "Observeu que les paraules amb negreta-cursiva &mdash; usuari, domini.nom, sistema de fitxers, paquet, versió i llançament. Cada paraula és un marcador de posició, tant per a un text introduït des de la línia de comandes, o per al text mostrat pel sistema."
 
 #. Tag: para
