--- a/publican/datadir/Common_Content/common/cs-CZ/Conventions.po
+++ b/publican/datadir/Common_Content/common/cs-CZ/Conventions.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Conventions-cs\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2010-09-28T06:49:34\n"
+"POT-Creation-Date: 2010-09-29T05:30:03\n"
 "PO-Revision-Date: 2009-05-27 20:10+0200\n"
 "Last-Translator: Nikola Štohanzl <niko@srnet.cz>\n"
 "Language-Team: Czech\n"
@@ -106,7 +106,7 @@ msgstr "Vybráním <guimenu>System > Preferences > Mouse</guimenu> v hlavním me
 
 #. Tag: para
 #, fuzzy, no-c-format
-msgid "To insert a special character into a <application>gedit</application> file, choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</guisubmenu><guimenuitem>Character Map</guimenuitem></menuchoice> from the main menu bar. Next, choose <menuchoice><guimenu>Search</guimenu><guimenuitem>Find&amp;hellip;</guimenuitem></menuchoice> from the <application>Character Map</application> menu bar, type the name of the character in the <guilabel>Search</guilabel> field and click <guibutton>Next</guibutton>. The character you sought will be highlighted in the <guilabel>Character Table</guilabel>. Double-click this highlighted character to place it in the <guilabel>Text to copy</guilabel> field and then click the <guibutton>Copy</guibutton> button. Now switch back to your document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
+msgid "To insert a special character into a <application>gedit</application> file, choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</guisubmenu><guimenuitem>Character Map</guimenuitem></menuchoice> from the main menu bar. Next, choose <menuchoice><guimenu>Search</guimenu><guimenuitem>Find&hellip;</guimenuitem></menuchoice> from the <application>Character Map</application> menu bar, type the name of the character in the <guilabel>Search</guilabel> field and click <guibutton>Next</guibutton>. The character you sought will be highlighted in the <guilabel>Character Table</guilabel>. Double-click this highlighted character to place it in the <guilabel>Text to copy</guilabel> field and then click the <guibutton>Copy</guibutton> button. Now switch back to your document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
 msgstr "Chcete-li vložit speciální znak do souboru v aplikaci <application>gedit</application>, zvolte <guimenu>Applications > Accessories > Character Map</guimenu> v hlavním menu. Pokračujte <guimenu>Search > Find&hellip;</guimenu> v menu <application>Character Map</application> napište název znaku do pole <guilabel>Search</guilabel> a stiskněte <guibutton>Next</guibutton>. Hledaný znak by měl být zvýrazněn v <guilabel>Character Table</guilabel>. Dvojklikem zvýrazněný znak umístěte do pole <guilabel>Text to copy</guilabel> a pak stiskněte tlačítko <guibutton>Copy</guibutton>. Po návratu do dokumentu zvolte <guimenu>Edit > Paste</guimenu> v menu aplikace<application>gedit</application>."
 
 #. Tag: para
@@ -141,7 +141,7 @@ msgstr "Chcete-li zobrazit verzi nainstalovaného balíčku, použijte příkaz 
 
 #. Tag: para
 #, fuzzy, no-c-format
-msgid "Note the words in bold italics above &amp;mdash; username, domain.name, file-system, package, version and release. Each word is a placeholder, either for text you enter when issuing a command or for text displayed by the system."
+msgid "Note the words in bold italics above &mdash; username, domain.name, file-system, package, version and release. Each word is a placeholder, either for text you enter when issuing a command or for text displayed by the system."
 msgstr "Všimněte si výše uvedených slov zobrazených tučnou kurzívou &mdash; username, domain.name, file-system, package, version a release. Každé z těchto slov reprezentuje buď text, který zadáváte při spouštění příkazu, nebo text, zobrazovaný systémem. "
 
 #. Tag: para
