--- a/publican/datadir/Common_Content/common/de-CH/Conventions.po
+++ b/publican/datadir/Common_Content/common/de-CH/Conventions.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Conventions\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2010-09-28T06:49:34\n"
+"POT-Creation-Date: 2010-09-29T05:30:03\n"
 "PO-Revision-Date: 2008-10-25 22:05+0000\n"
 "Last-Translator: <fab@fedoraproject.org>\n"
 "Language-Team:  <fedora-trans-de@redhat.com>\n"
@@ -107,7 +107,7 @@ msgstr "Wählen Sie <guimenu>System > Präferenzen > Maus</guimenu> in der Haupt
 
 #. Tag: para
 #, fuzzy, no-c-format
-msgid "To insert a special character into a <application>gedit</application> file, choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</guisubmenu><guimenuitem>Character Map</guimenuitem></menuchoice> from the main menu bar. Next, choose <menuchoice><guimenu>Search</guimenu><guimenuitem>Find&amp;hellip;</guimenuitem></menuchoice> from the <application>Character Map</application> menu bar, type the name of the character in the <guilabel>Search</guilabel> field and click <guibutton>Next</guibutton>. The character you sought will be highlighted in the <guilabel>Character Table</guilabel>. Double-click this highlighted character to place it in the <guilabel>Text to copy</guilabel> field and then click the <guibutton>Copy</guibutton> button. Now switch back to your document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
+msgid "To insert a special character into a <application>gedit</application> file, choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</guisubmenu><guimenuitem>Character Map</guimenuitem></menuchoice> from the main menu bar. Next, choose <menuchoice><guimenu>Search</guimenu><guimenuitem>Find&hellip;</guimenuitem></menuchoice> from the <application>Character Map</application> menu bar, type the name of the character in the <guilabel>Search</guilabel> field and click <guibutton>Next</guibutton>. The character you sought will be highlighted in the <guilabel>Character Table</guilabel>. Double-click this highlighted character to place it in the <guilabel>Text to copy</guilabel> field and then click the <guibutton>Copy</guibutton> button. Now switch back to your document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
 msgstr "Um ein spezielles Zeichen in eine <application>gedit</application>-Datei einzufügen, wählen Sie <guimenu>Applikationen > Zubehör > Zeichentabelle</guimenu> in der Hauptmenüleiste aus. Wählen Sie als nächstes <guimenu>Suchen > Finden&hellip;</guimenu> aus der <application>Zeichentabelle</application>-Menüleiste aus, geben den Namen des Zeichens in das <guilabel>Suchen</guilabel>-Feld ein und klicken auf <guibutton>Weiter</guibutton>. Das gesuchte Zeichen wird in der <guilabel>Zeichentabelle</guilabel> hervorgehoben. Doppelklicken Sie auf das hervorgehobene Zeichen, um es in das Feld <guilabel>Zu kopierender Text</guilabel> einzufügen und klicken Sie auf die Schaltfläche <guibutton>Kopieren</guibutton>. Wechseln Sie nun zurück in Ihr Dokument und wählen Sie <guimenu>Bearbeiten > Einfügen</guimenu> aus der <application>gedit</application>-Menüleiste aus."
 
 #. Tag: para
@@ -142,7 +142,7 @@ msgstr "Um die Version des derzeit installierten Paketes zu sehen, verwenden Sie
 
 #. Tag: para
 #, fuzzy, no-c-format
-msgid "Note the words in bold italics above &amp;mdash; username, domain.name, file-system, package, version and release. Each word is a placeholder, either for text you enter when issuing a command or for text displayed by the system."
+msgid "Note the words in bold italics above &mdash; username, domain.name, file-system, package, version and release. Each word is a placeholder, either for text you enter when issuing a command or for text displayed by the system."
 msgstr "Achten Sie auf die oben aufgeführten Wörter, die fett und kursiv gedruckt sind &mdash; username, domain.name, file-system, package, version und release. Jedes Wort ist ein Platzhalter, entweder für einen Text, den Sie eingeben, wenn Sie einen Befehl ausführen oder für Text, der durch das System angezeigt wird."
 
 #. Tag: para
