--- a/publican/datadir/Common_Content/common/el-GR/Conventions.po
+++ b/publican/datadir/Common_Content/common/el-GR/Conventions.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Publican\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2010-09-28T06:49:34\n"
+"POT-Creation-Date: 2010-09-29T05:30:03\n"
 "PO-Revision-Date: 2009-10-31 18:51+0200\n"
 "Last-Translator: Dimitrios Typaldos <dimtyp@gmail.com>\n"
 "Language-Team: Greek <fedora-trans-el@redhat.com>\n"
@@ -109,7 +109,7 @@ msgstr "Επιλέξτε <guimenu>Σύστημα > Προτιμήσεις > Πο
 
 #. Tag: para
 #, fuzzy, no-c-format
-msgid "To insert a special character into a <application>gedit</application> file, choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</guisubmenu><guimenuitem>Character Map</guimenuitem></menuchoice> from the main menu bar. Next, choose <menuchoice><guimenu>Search</guimenu><guimenuitem>Find&amp;hellip;</guimenuitem></menuchoice> from the <application>Character Map</application> menu bar, type the name of the character in the <guilabel>Search</guilabel> field and click <guibutton>Next</guibutton>. The character you sought will be highlighted in the <guilabel>Character Table</guilabel>. Double-click this highlighted character to place it in the <guilabel>Text to copy</guilabel> field and then click the <guibutton>Copy</guibutton> button. Now switch back to your document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
+msgid "To insert a special character into a <application>gedit</application> file, choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</guisubmenu><guimenuitem>Character Map</guimenuitem></menuchoice> from the main menu bar. Next, choose <menuchoice><guimenu>Search</guimenu><guimenuitem>Find&hellip;</guimenuitem></menuchoice> from the <application>Character Map</application> menu bar, type the name of the character in the <guilabel>Search</guilabel> field and click <guibutton>Next</guibutton>. The character you sought will be highlighted in the <guilabel>Character Table</guilabel>. Double-click this highlighted character to place it in the <guilabel>Text to copy</guilabel> field and then click the <guibutton>Copy</guibutton> button. Now switch back to your document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
 msgstr "Για την εισαγωγή ειδικού χαρακτήρα σε ένα αρχείο <application>gedit</application>, επιλέξτε <guimenu>Εφαρμογές > Βοηθήματα > Πίνακας χαρακτήρων</guimenu> από τη γραμμή του κεντρικού μενού. Στη συνέχεια, επιλέξτε <guimenu>Αναζήτηση > Εύρεση&hellip;</guimenu> από τη γραμμή του μενού <application>Πίνακας χαρακτήρων</application>, πληκτρολογείστε το όνομα του χαρακτήρα στο πεδίο <guilabel>Αναζήτηση</guilabel> και κάντε κλικ στο κουμπί <guibutton>Επόμενο</guibutton>. Ο χαρακτήρας που αναζητήσατε θα εμφανιστεί έντονα στο παράθυρο <guilabel>Πίνακας χαρακτήρων</guilabel>. Κάντε διπλό-κλικ στον έντονα εμφανιζόμενο αυτό χαρακτήρα για να τοποθετηθεί στο πεδίο <guilabel>Κείμενο προς αντιγραφή</guilabel> και έπειτα κάντε κλικ στο κουμπί <guibutton>Αντιγραφή</guibutton>. Τώρα, επιστρέψτε πίσω στο έγγραφό σας και επιλέξτε <guimenu>Επεξεργασία > Επικόλληση</guimenu> από τη γραμμή μενού του <application>gedit</application>."
 
 #. Tag: para
@@ -144,7 +144,7 @@ msgstr "Για εμφάνιση της έκδοσης ενός πρόσφατα 
 
 #. Tag: para
 #, fuzzy, no-c-format
-msgid "Note the words in bold italics above &amp;mdash; username, domain.name, file-system, package, version and release. Each word is a placeholder, either for text you enter when issuing a command or for text displayed by the system."
+msgid "Note the words in bold italics above &mdash; username, domain.name, file-system, package, version and release. Each word is a placeholder, either for text you enter when issuing a command or for text displayed by the system."
 msgstr "Σημειώστε τις λέξεις με έντονους πλάγιους χαρακτήρες παραπάνω &mdash; όνομα χρήστη, όνομα τομέα, σύστημα αρχείων, πακέτο, έκδοση και κυκλοφορία. Κάθε λέξη είναι ένας χώρος είτε για κείμενο όταν εκτελείται μία εντολή είτε για κείμενο που εμφανίζεται από το σύστημα."
 
 #. Tag: para
