--- a/publican/datadir/Common_Content/common/es-ES/Conventions.po
+++ b/publican/datadir/Common_Content/common/es-ES/Conventions.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Conventions\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2010-09-28T06:49:34\n"
+"POT-Creation-Date: 2010-09-29T05:30:03\n"
 "PO-Revision-Date: 2009-12-02 16:08+1000\n"
 "Last-Translator: Manuel Ospina <mospina@redhat.com>\n"
 "Language-Team: Spanish <en@li.org>\n"
@@ -107,7 +107,7 @@ msgstr "Seleccionar <menuchoice><guimenu>Sistema</guimenu><guisubmenu>Preferenci
 
 #. Tag: para
 #, fuzzy, no-c-format
-msgid "To insert a special character into a <application>gedit</application> file, choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</guisubmenu><guimenuitem>Character Map</guimenuitem></menuchoice> from the main menu bar. Next, choose <menuchoice><guimenu>Search</guimenu><guimenuitem>Find&amp;hellip;</guimenuitem></menuchoice> from the <application>Character Map</application> menu bar, type the name of the character in the <guilabel>Search</guilabel> field and click <guibutton>Next</guibutton>. The character you sought will be highlighted in the <guilabel>Character Table</guilabel>. Double-click this highlighted character to place it in the <guilabel>Text to copy</guilabel> field and then click the <guibutton>Copy</guibutton> button. Now switch back to your document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
+msgid "To insert a special character into a <application>gedit</application> file, choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</guisubmenu><guimenuitem>Character Map</guimenuitem></menuchoice> from the main menu bar. Next, choose <menuchoice><guimenu>Search</guimenu><guimenuitem>Find&hellip;</guimenuitem></menuchoice> from the <application>Character Map</application> menu bar, type the name of the character in the <guilabel>Search</guilabel> field and click <guibutton>Next</guibutton>. The character you sought will be highlighted in the <guilabel>Character Table</guilabel>. Double-click this highlighted character to place it in the <guilabel>Text to copy</guilabel> field and then click the <guibutton>Copy</guibutton> button. Now switch back to your document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
 msgstr "Para insertar un caracter especial en un archivo de <application>gedit</application>, seleccione desde la barra del menú principal <menuchoice><guimenu>Aplicaciones</guimenu><guisubmenu>Accesorios</guisubmenu><guimenuitem>Mapa de caracteres</guimenuitem></menuchoice>. Luego, desde la barra del menú <application>mapa de caracteres</application> elija <menuchoice><guimenu>Búsqueda</guimenu><guimenuitem>Hallar&hellip;</guimenuitem></menuchoice>, teclee el nombre del caracter en el campo <guilabel>Búsqueda</guilabel> y haga clic en <guibutton>Siguiente</guibutton>. El caracter buscado se resaltará en la <guilabel>Tabla de caracteres</guilabel>. Haga doble clic en este caracter resaltado para colocarlo en el campo de <guilabel>Texto para copiar</guilabel> y luego haga clic en el botón de <guibutton>Copiar</guibutton>. Ahora regrese a su documento y elija <menuchoice><guimenu>Editar</guimenu><guimenuitem>Pegar</guimenuitem></menuchoice> desde la barra de menú de <application>gedit</application>."
 
 #. Tag: para
@@ -142,7 +142,7 @@ msgstr "Para ver la versión de un paquete actualmente instalado, utilice el com
 
 #. Tag: para
 #, fuzzy, no-c-format
-msgid "Note the words in bold italics above &amp;mdash; username, domain.name, file-system, package, version and release. Each word is a placeholder, either for text you enter when issuing a command or for text displayed by the system."
+msgid "Note the words in bold italics above &mdash; username, domain.name, file-system, package, version and release. Each word is a placeholder, either for text you enter when issuing a command or for text displayed by the system."
 msgstr "Observe las palabras en itálicas- negrita sobre &mdash; nombre de usuario, domain.name, sistema de archivo, paquete, versión y lanzamiento. Cada palabra es un marcador de posición, tanto para el texto que usted escriba al ejecutar un comando como para el texto mostrado por el sistema."
 
 #. Tag: para
