--- a/publican/datadir/Common_Content/common/gu-IN/Conventions.po
+++ b/publican/datadir/Common_Content/common/gu-IN/Conventions.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: publican.common_content.Conventions\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2010-09-28T06:49:34\n"
+"POT-Creation-Date: 2010-09-29T05:30:03\n"
 "PO-Revision-Date: 2010-09-27 17:11+0530\n"
 "Last-Translator: Sweta Kothari <swkothar@redhat.com>\n"
 "Language-Team: Gujarati\n"
@@ -108,7 +108,7 @@ msgstr "<application>માઉસ પસંદગીઓ</application> ને પ
 
 #. Tag: para
 #, fuzzy, no-c-format
-msgid "To insert a special character into a <application>gedit</application> file, choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</guisubmenu><guimenuitem>Character Map</guimenuitem></menuchoice> from the main menu bar. Next, choose <menuchoice><guimenu>Search</guimenu><guimenuitem>Find&amp;hellip;</guimenuitem></menuchoice> from the <application>Character Map</application> menu bar, type the name of the character in the <guilabel>Search</guilabel> field and click <guibutton>Next</guibutton>. The character you sought will be highlighted in the <guilabel>Character Table</guilabel>. Double-click this highlighted character to place it in the <guilabel>Text to copy</guilabel> field and then click the <guibutton>Copy</guibutton> button. Now switch back to your document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
+msgid "To insert a special character into a <application>gedit</application> file, choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</guisubmenu><guimenuitem>Character Map</guimenuitem></menuchoice> from the main menu bar. Next, choose <menuchoice><guimenu>Search</guimenu><guimenuitem>Find&hellip;</guimenuitem></menuchoice> from the <application>Character Map</application> menu bar, type the name of the character in the <guilabel>Search</guilabel> field and click <guibutton>Next</guibutton>. The character you sought will be highlighted in the <guilabel>Character Table</guilabel>. Double-click this highlighted character to place it in the <guilabel>Text to copy</guilabel> field and then click the <guibutton>Copy</guibutton> button. Now switch back to your document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
 msgstr "<application>gedit</application> ફાઇલ માં ચોક્કસ અક્ષર દાખલ કરવા માટે, મુખ્ય મેનુ પટ્ટીમાંથી <menuchoice><guimenu>કાર્યક્રમો</guimenu><guisubmenu>સહાયક સામગ્રી</guisubmenu><guimenuitem>અક્ષર નક્ષો</guimenuitem></menuchoice> ને પસંદ કરો. પછીનું, <application>અક્ષર નક્ષો</application> મેનુ પટ્ટી માંથી <menuchoice><guimenu>શોધો</guimenu><guimenuitem>Find&hellip;</guimenuitem></menuchoice> ને પસંદ કરો, <guilabel>શોધો</guilabel> ક્ષેત્ર માં અક્ષરનું નામ ટાઇપ કરો અને <guibutton>પછી</guibutton> પર ક્લિક કરો. અક્ષર તમે <guilabel>અક્ષર ટેબલ</guilabel> માં શોધી કાઢ્યુ છે તે પ્રકાશિત થયેલ છે. ડબલ-ક્લિક આ પ્રકાશિત થયેલ અક્ષર <guilabel>નકલ કરવા માટે લખાણ</guilabel> ક્ષેત્રમાં તેને રાખેલ છે અને <guibutton>નકલ</guibutton> બટન પર ક્લિક કરો. હવે તમારા દસ્તાવેજ પર પાછા ફેરબદલ કરો અને <application>gedit</application> મેનુ પટ્ટી માંથી <menuchoice><guimenu>ફેરફાર કરો</guimenu><guimenuitem>ચોંટાડો</guimenuitem></menuchoice> ને પસંદ કરો."
 
 #. Tag: para
@@ -143,7 +143,7 @@ msgstr "તાજેતરની સ્થાપિત થયેલ પેકે
 
 #. Tag: para
 #, fuzzy, no-c-format
-msgid "Note the words in bold italics above &amp;mdash; username, domain.name, file-system, package, version and release. Each word is a placeholder, either for text you enter when issuing a command or for text displayed by the system."
+msgid "Note the words in bold italics above &mdash; username, domain.name, file-system, package, version and release. Each word is a placeholder, either for text you enter when issuing a command or for text displayed by the system."
 msgstr "નોંધો કે બોલ્ડ ઇટાલિકમાં ઉપર &mdash; વપરાશકર્તાનામ, domain.name, ફાઇલ-સિસ્ટમ, પેકેજ, આવૃત્તિ અને પ્રકાશનમાં છે. દરેક શબ્દ એ પ્લેસહોલ્ડર છે, ક્યાં તો જ્યારે આદેશને તમે દાખલ કરી રહ્યા હોય છે તે લખાણ માટે અથવા સિસ્ટમ દ્દારા દર્શાવેલ વખાણ માટે છે."
 
 #. Tag: para
