--- a/publican/datadir/Common_Content/common/he-IL/Conventions.po
+++ b/publican/datadir/Common_Content/common/he-IL/Conventions.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2010-09-28T06:49:34\n"
+"POT-Creation-Date: 2010-09-29T05:30:03\n"
 "PO-Revision-Date: 2009-06-06 13:20+0300\n"
 "Last-Translator: Oron Peled <oron@actcom.co.il>\n"
 "Language-Team: Hebrew Team <fedora-he-list@redhat.com>\n"
@@ -107,7 +107,7 @@ msgstr "יש לבחור <guimenu>מערכת > העדפות > עכבר</guimenu> 
 
 #. Tag: para
 #, fuzzy, no-c-format
-msgid "To insert a special character into a <application>gedit</application> file, choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</guisubmenu><guimenuitem>Character Map</guimenuitem></menuchoice> from the main menu bar. Next, choose <menuchoice><guimenu>Search</guimenu><guimenuitem>Find&amp;hellip;</guimenuitem></menuchoice> from the <application>Character Map</application> menu bar, type the name of the character in the <guilabel>Search</guilabel> field and click <guibutton>Next</guibutton>. The character you sought will be highlighted in the <guilabel>Character Table</guilabel>. Double-click this highlighted character to place it in the <guilabel>Text to copy</guilabel> field and then click the <guibutton>Copy</guibutton> button. Now switch back to your document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
+msgid "To insert a special character into a <application>gedit</application> file, choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</guisubmenu><guimenuitem>Character Map</guimenuitem></menuchoice> from the main menu bar. Next, choose <menuchoice><guimenu>Search</guimenu><guimenuitem>Find&hellip;</guimenuitem></menuchoice> from the <application>Character Map</application> menu bar, type the name of the character in the <guilabel>Search</guilabel> field and click <guibutton>Next</guibutton>. The character you sought will be highlighted in the <guilabel>Character Table</guilabel>. Double-click this highlighted character to place it in the <guilabel>Text to copy</guilabel> field and then click the <guibutton>Copy</guibutton> button. Now switch back to your document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
 msgstr "להכנסת תווים מיוחדים לקובץ <application>gedit</application>, יש לבחור מסרגל התפריטים הראשי <guimenu>ישומים > עזרים > מפת תווים</guimenu>. מתפריט היישום <application>מפת תווים</application> צריך לבחור <guimenu>חיפוש > מצא ‎&hellip;‏</guimenu> יש להקליד את שם התו בשדה <guilabel>חיפוש</guilabel> וללחוץ על כפתור <guibutton>הבא</guibutton>. התו שחיפשתם יודגש ב<guilabel>טבלת התווים</guilabel>. נא ללחוץ לחיצה כפולה על התו המודגש, כדי להעתיק אותו לשדה <guilabel>מלל להעתקה</guilabel> ואז על כפתור <guibutton>העתק</guibutton>. עתה יש לחזור למסמך שלכם ולבחור מהתפריט של <application>gedit</application> את פעולות <guimenu>עריכה > הדבק</guimenu>."
 
 #. Tag: para
@@ -142,7 +142,7 @@ msgstr "כדי לראות את הגרסה של חבילת תכנה מותקנת,
 
 #. Tag: para
 #, fuzzy, no-c-format
-msgid "Note the words in bold italics above &amp;mdash; username, domain.name, file-system, package, version and release. Each word is a placeholder, either for text you enter when issuing a command or for text displayed by the system."
+msgid "Note the words in bold italics above &mdash; username, domain.name, file-system, package, version and release. Each word is a placeholder, either for text you enter when issuing a command or for text displayed by the system."
 msgstr "שימו לב למילים המודגשות והמוטות לעיל &mdash; username, domain.name, file-system, package, version ו-release. כל מילה כזו מציינת מקום של טקסט שיוקלד או שיוצג על ידי המערכת."
 
 #. Tag: para
