--- a/publican/datadir/Common_Content/common/hr-HR/Conventions.po
+++ b/publican/datadir/Common_Content/common/hr-HR/Conventions.po
@@ -1,12 +1,12 @@
 # Croatian translation of PACKAGE.
 # Josip Šumečki <shumi.1337@gmail.com>, 2009.
-# 
-# 
+#
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2010-09-28T06:49:34\n"
+"POT-Creation-Date: 2010-09-29T05:30:03\n"
 "PO-Revision-Date: 2009-07-25 16:58+0200\n"
 "Last-Translator: Josip Šumečki <shumi.1337@gmail.com>\n"
 "Language-Team: Croatian <kde-i18n-doc@kde.org>\n"
@@ -106,7 +106,7 @@ msgstr "Izaberite <guimenu>Sustav·>·Postavke·>·Miš</guimenu> iz glavnog men
 
 #. Tag: para
 #, fuzzy, no-c-format
-msgid "To insert a special character into a <application>gedit</application> file, choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</guisubmenu><guimenuitem>Character Map</guimenuitem></menuchoice> from the main menu bar. Next, choose <menuchoice><guimenu>Search</guimenu><guimenuitem>Find&amp;hellip;</guimenuitem></menuchoice> from the <application>Character Map</application> menu bar, type the name of the character in the <guilabel>Search</guilabel> field and click <guibutton>Next</guibutton>. The character you sought will be highlighted in the <guilabel>Character Table</guilabel>. Double-click this highlighted character to place it in the <guilabel>Text to copy</guilabel> field and then click the <guibutton>Copy</guibutton> button. Now switch back to your document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
+msgid "To insert a special character into a <application>gedit</application> file, choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</guisubmenu><guimenuitem>Character Map</guimenuitem></menuchoice> from the main menu bar. Next, choose <menuchoice><guimenu>Search</guimenu><guimenuitem>Find&hellip;</guimenuitem></menuchoice> from the <application>Character Map</application> menu bar, type the name of the character in the <guilabel>Search</guilabel> field and click <guibutton>Next</guibutton>. The character you sought will be highlighted in the <guilabel>Character Table</guilabel>. Double-click this highlighted character to place it in the <guilabel>Text to copy</guilabel> field and then click the <guibutton>Copy</guibutton> button. Now switch back to your document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
 msgstr "Kako biste ubacili specijalan znak u <application>gedit</application> datoteku, odaberite <guimenu>Programi > Pomagala > Tablica Znakova</guimenu> iz glavnog menija. Zatim izaberite <guimenu>Traži·>·Nađi&hellip;</guimenu> iz menija od <application>Tablica Znakova</application>, unesite ime znaka u polje <guilabel>Traži</guilabel> i kliknite <guibutton>Sljedeći</guibutton>. Znak kojeg ste tražili bit će istaknut u <guilabel>Tablica Znakova</guilabel>. Dvaput kliknite na istaknut znak kako biste ga ubacili u polje <guilabel>Tekst za kopiranje</guilabel> te zatim pritisnite tipku <guibutton>Kopiraj</guibutton>. Zatim prebacite u svoj dokumenat i izaberite <guimenu>Uredi > Zalijepi</guimenu> iz menija od <application>gedit</application>."
 
 #. Tag: para
@@ -141,7 +141,7 @@ msgstr "Kako biste vidjeli verziju paketa koji je trenutno instaliran, koristite
 
 #. Tag: para
 #, fuzzy, no-c-format
-msgid "Note the words in bold italics above &amp;mdash; username, domain.name, file-system, package, version and release. Each word is a placeholder, either for text you enter when issuing a command or for text displayed by the system."
+msgid "Note the words in bold italics above &mdash; username, domain.name, file-system, package, version and release. Each word is a placeholder, either for text you enter when issuing a command or for text displayed by the system."
 msgstr "Primjetite podebljane ukošene riječi u gornjim primjerima &mdash; korisničko_ime, domena.ime, datotečni_sustav, paket, verzija i izdanje. Svaka od tih riječi odvojena je praznim mjestom, bilo za tekst koji će se unijeti kod izvršavanje naredbe, ili za tekst koji će operativni sustav prikazati."
 
 #. Tag: para
