--- a/publican/datadir/Common_Content/common/is-IS/Conventions.po
+++ b/publican/datadir/Common_Content/common/is-IS/Conventions.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Conventions\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2010-09-28T06:49:34\n"
+"POT-Creation-Date: 2010-09-29T05:30:03\n"
 "PO-Revision-Date: 2009-04-23 09:46+0000\n"
 "Last-Translator: Sveinn í Felli <sveinki@nett.is>\n"
 "Language-Team: icelandic <kde-isl@molar.is>\n"
@@ -106,7 +106,7 @@ msgstr "Veldu <guimenu>Kerfi > Stillingar > Mús</guimenu> úr aðalvalmyndinni 
 
 #. Tag: para
 #, fuzzy, no-c-format
-msgid "To insert a special character into a <application>gedit</application> file, choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</guisubmenu><guimenuitem>Character Map</guimenuitem></menuchoice> from the main menu bar. Next, choose <menuchoice><guimenu>Search</guimenu><guimenuitem>Find&amp;hellip;</guimenuitem></menuchoice> from the <application>Character Map</application> menu bar, type the name of the character in the <guilabel>Search</guilabel> field and click <guibutton>Next</guibutton>. The character you sought will be highlighted in the <guilabel>Character Table</guilabel>. Double-click this highlighted character to place it in the <guilabel>Text to copy</guilabel> field and then click the <guibutton>Copy</guibutton> button. Now switch back to your document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
+msgid "To insert a special character into a <application>gedit</application> file, choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</guisubmenu><guimenuitem>Character Map</guimenuitem></menuchoice> from the main menu bar. Next, choose <menuchoice><guimenu>Search</guimenu><guimenuitem>Find&hellip;</guimenuitem></menuchoice> from the <application>Character Map</application> menu bar, type the name of the character in the <guilabel>Search</guilabel> field and click <guibutton>Next</guibutton>. The character you sought will be highlighted in the <guilabel>Character Table</guilabel>. Double-click this highlighted character to place it in the <guilabel>Text to copy</guilabel> field and then click the <guibutton>Copy</guibutton> button. Now switch back to your document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
 msgstr "Til að setja sérstakt stafatákn inn í skrá sem opin er í <application>gedit</application>, veldu þá <guimenu>Forrit > Aukahlutir > Stafaval</guimenu> úr aðalvalmyndinni. Veldu þvínæst <guimenu>Leita > Leita&hellip;</guimenu> úr valmynd <application>Stafaval</application> forritsins, settu inn heiti táknsins í <guilabel>Finna</guilabel> reitinn og smelltu á <guibutton>Næsta</guibutton> hnappinn. Táknið sem þú leitaðir að verður þá upplýst á flipanum <guilabel>Stafatafla</guilabel>. Tvísmelltu á þetta tákn til að færa það yfir í <guilabel>Afrita texta:</guilabel> reitinn, smelltu síðan á <guibutton>Afrita</guibutton> hnappinn. Nú getur þú snúið aftur í skrána þína og valið <guimenu>Breyta > Líma</guimenu> af valmynd <application>gedit</application> forritsins."
 
 #. Tag: para
@@ -141,7 +141,7 @@ msgstr "Til að sjá hvaða útgáfu þú ert með af uppsettum pakka, notaðu s
 
 #. Tag: para
 #, fuzzy, no-c-format
-msgid "Note the words in bold italics above &amp;mdash; username, domain.name, file-system, package, version and release. Each word is a placeholder, either for text you enter when issuing a command or for text displayed by the system."
+msgid "Note the words in bold italics above &mdash; username, domain.name, file-system, package, version and release. Each word is a placeholder, either for text you enter when issuing a command or for text displayed by the system."
 msgstr "Taktu eftir feit- og skáletruðu orðunum hér að ofan &mdash; notandanafn, heiti.léns, skráakerfi, forritspakki, útgáfu- og uppfærslunúmer. Hvert þeirra er staðgengill fyrir önnur raunveruleg orð sem ýmist eru sett inn af notanda þegar skipanir eru gefnar, eða eru sýnd sem niðurstaða af útreikningum eða vinnu kerfisins."
 
 #. Tag: para
