--- a/publican/datadir/Common_Content/common/it-IT/Conventions.po
+++ b/publican/datadir/Common_Content/common/it-IT/Conventions.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Conventions\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2010-09-28T06:49:34\n"
+"POT-Creation-Date: 2010-09-29T05:30:03\n"
 "PO-Revision-Date: 2009-12-03 09:45+1000\n"
 "Last-Translator: \n"
 "Language-Team:  <it@li.org>\n"
@@ -104,7 +104,7 @@ msgstr "Selezionare <menuchoice><guimenu>Sistema</guimenu><guisubmenu>Preferenze
 
 #. Tag: para
 #, fuzzy, no-c-format
-msgid "To insert a special character into a <application>gedit</application> file, choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</guisubmenu><guimenuitem>Character Map</guimenuitem></menuchoice> from the main menu bar. Next, choose <menuchoice><guimenu>Search</guimenu><guimenuitem>Find&amp;hellip;</guimenuitem></menuchoice> from the <application>Character Map</application> menu bar, type the name of the character in the <guilabel>Search</guilabel> field and click <guibutton>Next</guibutton>. The character you sought will be highlighted in the <guilabel>Character Table</guilabel>. Double-click this highlighted character to place it in the <guilabel>Text to copy</guilabel> field and then click the <guibutton>Copy</guibutton> button. Now switch back to your document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
+msgid "To insert a special character into a <application>gedit</application> file, choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</guisubmenu><guimenuitem>Character Map</guimenuitem></menuchoice> from the main menu bar. Next, choose <menuchoice><guimenu>Search</guimenu><guimenuitem>Find&hellip;</guimenuitem></menuchoice> from the <application>Character Map</application> menu bar, type the name of the character in the <guilabel>Search</guilabel> field and click <guibutton>Next</guibutton>. The character you sought will be highlighted in the <guilabel>Character Table</guilabel>. Double-click this highlighted character to place it in the <guilabel>Text to copy</guilabel> field and then click the <guibutton>Copy</guibutton> button. Now switch back to your document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
 msgstr "Per inserire un carattere speciale in un file <application>gedit</application>, selezionare <menuchoice><guimenu>Applicazioni</guimenu><guisubmenu>Accessori</guisubmenu><guimenuitem>Mappa carattere</guimenuitem></menuchoice> dalla barra menu principale. Successivamente, selezionare <menuchoice><guimenu>Cerca</guimenu><guimenuitem>Trova&hellip;</guimenuitem></menuchoice> dalla barra del menu <application>Mappa carattere</application>, inserire il nome del carattere nel campo <guilabel>Cerca</guilabel> e cliccare <guibutton>Successivo</guibutton>. Il carattere ricercato verrà evidenziato nella <guilabel>Tabella caratteri</guilabel>. Fare un doppio clic sul carattere evidenziato per posizionarlo nel campo <guilabel>Testo da copiare</guilabel>, e successivamente fare clic sul pulsante <guibutton>Copia</guibutton>. Ritornare ora al documento e selezionare <menuchoice><guimenu>Modifica</guimenu><guimenuitem>Incolla</guimenuitem></menuchoice> dalla barra del menu di <application>gedit</application>."
 
 #. Tag: para
@@ -139,7 +139,7 @@ msgstr "Per visualizzare la versione di un pacchetto attualmente installato, uti
 
 #. Tag: para
 #, fuzzy, no-c-format
-msgid "Note the words in bold italics above &amp;mdash; username, domain.name, file-system, package, version and release. Each word is a placeholder, either for text you enter when issuing a command or for text displayed by the system."
+msgid "Note the words in bold italics above &mdash; username, domain.name, file-system, package, version and release. Each word is a placeholder, either for text you enter when issuing a command or for text displayed by the system."
 msgstr "Da notare la parola in Corsivo neretto &mdash; nome utente, domain.name, file-system, pacchetto, versione e release. Ogni parola racchiude il testo da voi inserito durante l'emissione di un comando o per il testo mostrato dal sistema."
 
 #. Tag: para
