--- a/publican/datadir/Common_Content/common/ko-KR/Conventions.po
+++ b/publican/datadir/Common_Content/common/ko-KR/Conventions.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Conventions\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2010-09-28T06:49:34\n"
+"POT-Creation-Date: 2010-09-29T05:30:03\n"
 "PO-Revision-Date: 2009-12-03 13:49+1000\n"
 "Last-Translator: Eunju Kim <eukim@redhat.com>\n"
 "Language-Team: Korean <ko@li.org>\n"
@@ -111,7 +111,7 @@ msgstr "주 메뉴 바에서 <menuchoice><guimenu>시스템</guimenu><guisubmenu
 
 #. Tag: para
 #, fuzzy, no-c-format
-msgid "To insert a special character into a <application>gedit</application> file, choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</guisubmenu><guimenuitem>Character Map</guimenuitem></menuchoice> from the main menu bar. Next, choose <menuchoice><guimenu>Search</guimenu><guimenuitem>Find&amp;hellip;</guimenuitem></menuchoice> from the <application>Character Map</application> menu bar, type the name of the character in the <guilabel>Search</guilabel> field and click <guibutton>Next</guibutton>. The character you sought will be highlighted in the <guilabel>Character Table</guilabel>. Double-click this highlighted character to place it in the <guilabel>Text to copy</guilabel> field and then click the <guibutton>Copy</guibutton> button. Now switch back to your document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
+msgid "To insert a special character into a <application>gedit</application> file, choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</guisubmenu><guimenuitem>Character Map</guimenuitem></menuchoice> from the main menu bar. Next, choose <menuchoice><guimenu>Search</guimenu><guimenuitem>Find&hellip;</guimenuitem></menuchoice> from the <application>Character Map</application> menu bar, type the name of the character in the <guilabel>Search</guilabel> field and click <guibutton>Next</guibutton>. The character you sought will be highlighted in the <guilabel>Character Table</guilabel>. Double-click this highlighted character to place it in the <guilabel>Text to copy</guilabel> field and then click the <guibutton>Copy</guibutton> button. Now switch back to your document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
 msgstr "<application>gedit</application> 파일에 특수 문자를 삽입하려면, 주 메뉴 바에서 <menuchoice><guimenu>프로그램</guimenu><guisubmenu>보조 프로그램</guisubmenu><guimenuitem>글자 표</guimenuitem></menuchoice>를 선택합니다. 다음으로 <application>글자 표</application>에서 <menuchoice><guimenu>검색</guimenu><guimenuitem>찾기&hellip;</guimenuitem></menuchoice>를 선택하고, <guilabel>검색</guilabel>란에 글자 이름을 입력한 후 <guibutton>다음</guibutton> 버튼을 클릭합니다. 찾으려는 글자가 <guilabel>글자 표</guilabel>에 표시되면, 이를 더블 클릭하여 <guilabel>복사할 글자</guilabel>란에 위치하게 한 후, <guibutton>복사</guibutton> 버튼을 클릭합니다. 그 후 문서로 다시 돌아와서 <application>gedit</application> 메뉴 바에서 <menuchoice><guimenu>편집</guimenu><guimenuitem>붙이기</guimenuitem></menuchoice>를 선택합니다.     "
 
 #. Tag: para
@@ -146,7 +146,7 @@ msgstr "현재 설치된 패키지 버전을 보려면, <command>rpm -q <replace
 
 #. Tag: para
 #, fuzzy, no-c-format
-msgid "Note the words in bold italics above &amp;mdash; username, domain.name, file-system, package, version and release. Each word is a placeholder, either for text you enter when issuing a command or for text displayed by the system."
+msgid "Note the words in bold italics above &mdash; username, domain.name, file-system, package, version and release. Each word is a placeholder, either for text you enter when issuing a command or for text displayed by the system."
 msgstr "위에서 굵은 이텔릭체로 나타나는 단어 &mdash; username, domain.name, file-system, package, version 및 release에 유의합니다. 각 단어는 임의의 단어로, 명령을 실행할 때 입력해야 할 텍스트이거나 또는 시스템에 의해 나타나는 텍스트입니다. "
 
 #. Tag: para
