--- a/publican/datadir/Common_Content/common/lv-LV/Conventions.po
+++ b/publican/datadir/Common_Content/common/lv-LV/Conventions.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Publican\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2010-09-28T06:49:34\n"
+"POT-Creation-Date: 2010-09-29T05:30:03\n"
 "PO-Revision-Date: 2009-06-03 21:17+0300\n"
 "Last-Translator: Jurijs Kolomijecs <admin@irben.id.lv>\n"
 "Language-Team: Latvian <kde-i18n-doc@kde.org>\n"
@@ -107,7 +107,7 @@ msgstr "Izvēlēties <guimenu>System > Preferences > Mouse</guimenu> no pamatizv
 
 #. Tag: para
 #, fuzzy, no-c-format
-msgid "To insert a special character into a <application>gedit</application> file, choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</guisubmenu><guimenuitem>Character Map</guimenuitem></menuchoice> from the main menu bar. Next, choose <menuchoice><guimenu>Search</guimenu><guimenuitem>Find&amp;hellip;</guimenuitem></menuchoice> from the <application>Character Map</application> menu bar, type the name of the character in the <guilabel>Search</guilabel> field and click <guibutton>Next</guibutton>. The character you sought will be highlighted in the <guilabel>Character Table</guilabel>. Double-click this highlighted character to place it in the <guilabel>Text to copy</guilabel> field and then click the <guibutton>Copy</guibutton> button. Now switch back to your document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
+msgid "To insert a special character into a <application>gedit</application> file, choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</guisubmenu><guimenuitem>Character Map</guimenuitem></menuchoice> from the main menu bar. Next, choose <menuchoice><guimenu>Search</guimenu><guimenuitem>Find&hellip;</guimenuitem></menuchoice> from the <application>Character Map</application> menu bar, type the name of the character in the <guilabel>Search</guilabel> field and click <guibutton>Next</guibutton>. The character you sought will be highlighted in the <guilabel>Character Table</guilabel>. Double-click this highlighted character to place it in the <guilabel>Text to copy</guilabel> field and then click the <guibutton>Copy</guibutton> button. Now switch back to your document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
 msgstr "Lai ielikt speciālo zīmi <application>gedit</application> failā, izvēlēties <guimenu>Applications > Accessories > Character Map</guimenu> no patamizvēlnes joslas. Tālāk, izvēlēties <guimenu>Search > Find&hellip;</guimenu> no <application>Character Map</application> izvēlnes joslas, ievediet zīmes nosaukumu <guilabel>Search</guilabel> laukā un nospiediet <guibutton>Next</guibutton>. Zīme, Jūs meklējāt, būs apgaismota <guilabel>Character Table</guilabel>. Dubultklikšķis uz tās apgaismotas zīmes lai ielikt to <guilabel>Text to copy</guilabel> laukā un pēc tam nospiediet <guibutton>Copy</guibutton> pogu. Tagad atgriežaties Jūsu dokumentā un izvēlēties <guimenu>Edit > Paste</guimenu> no <application>gedit</application> izvēlves joslas."
 
 #. Tag: para
@@ -142,7 +142,7 @@ msgstr "Lai apskatīties uzinstalētas pakotnes versiju, izmanto <command>rpm -q
 
 #. Tag: para
 #, fuzzy, no-c-format
-msgid "Note the words in bold italics above &amp;mdash; username, domain.name, file-system, package, version and release. Each word is a placeholder, either for text you enter when issuing a command or for text displayed by the system."
+msgid "Note the words in bold italics above &mdash; username, domain.name, file-system, package, version and release. Each word is a placeholder, either for text you enter when issuing a command or for text displayed by the system."
 msgstr "Atzīmējiet, vārdi trekna slīprakstā virsū &mdash; lietotājvārds, domēna.vārds, failu-sistēma, pakotne, versija un relīze. Katrs vārds ir vietturis, vai tekstam jūs ievedat kad rakstat komandu vai tekstam ko rāda sistēma."
 
 #. Tag: para
