--- a/publican/datadir/Common_Content/common/pt-PT/Conventions.po
+++ b/publican/datadir/Common_Content/common/pt-PT/Conventions.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Conventions\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2010-09-28T06:49:34\n"
+"POT-Creation-Date: 2010-09-29T05:30:03\n"
 "PO-Revision-Date: 2010-03-13 22:59+0100\n"
 "Last-Translator: Rui Gouveia <rui.gouveia@gmail.com>\n"
 "Language-Team: trans-pt@fedoraproject.org\n"
@@ -108,7 +108,7 @@ msgstr "Seleccione <menuchoice><guimenu>Sistema</guimenu><guisubmenu>Preferênci
 
 #. Tag: para
 #, fuzzy, no-c-format
-msgid "To insert a special character into a <application>gedit</application> file, choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</guisubmenu><guimenuitem>Character Map</guimenuitem></menuchoice> from the main menu bar. Next, choose <menuchoice><guimenu>Search</guimenu><guimenuitem>Find&amp;hellip;</guimenuitem></menuchoice> from the <application>Character Map</application> menu bar, type the name of the character in the <guilabel>Search</guilabel> field and click <guibutton>Next</guibutton>. The character you sought will be highlighted in the <guilabel>Character Table</guilabel>. Double-click this highlighted character to place it in the <guilabel>Text to copy</guilabel> field and then click the <guibutton>Copy</guibutton> button. Now switch back to your document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
+msgid "To insert a special character into a <application>gedit</application> file, choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</guisubmenu><guimenuitem>Character Map</guimenuitem></menuchoice> from the main menu bar. Next, choose <menuchoice><guimenu>Search</guimenu><guimenuitem>Find&hellip;</guimenuitem></menuchoice> from the <application>Character Map</application> menu bar, type the name of the character in the <guilabel>Search</guilabel> field and click <guibutton>Next</guibutton>. The character you sought will be highlighted in the <guilabel>Character Table</guilabel>. Double-click this highlighted character to place it in the <guilabel>Text to copy</guilabel> field and then click the <guibutton>Copy</guibutton> button. Now switch back to your document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
 msgstr "Para inserir um caractere especial num documento do <application>gedit</application>, seleccione <menuchoice><guimenu>Aplicações</guimenu><guisubmenu>Acessórios</guisubmenu><guimenuitem>Mapa de caracteres</guimenuitem></menuchoice> a partir da barra de menu principal. Em seguida, seleccione a opção <menuchoice><guimenu>Pesquisar</guimenu><guimenuitem>Procurar&hellip;</guimenuitem></menuchoice> a partir da barra de menus da aplicação <application>Mapa de Caracteres</application>, digite o nome do caractere no campo <guilabel>Pesquisar</guilabel> e carregue em <guibutton>Próximo</guibutton>. O caractere que procurava aparece destacado na <guilabel>Tabela de caracteres</guilabel>. Faça um duplo-clique sobre o caracter pretendido para o colocar no campo <guilabel>Texto a copiar</guilabel> e carregue no botão <guibutton>Copiar</guibutton>. Alterne para o documento e seleccione <menuchoice><guimenu>Editar</guimenu><guimenuitem>Colar</guimenuitem></menuchoice> a partir da barra de menus do <application>gedit</application>."
 
 #. Tag: para
@@ -143,7 +143,7 @@ msgstr "Para ver a versão de um pacote instalado, utilize o comando <command>rp
 
 #. Tag: para
 #, fuzzy, no-c-format
-msgid "Note the words in bold italics above &amp;mdash; username, domain.name, file-system, package, version and release. Each word is a placeholder, either for text you enter when issuing a command or for text displayed by the system."
+msgid "Note the words in bold italics above &mdash; username, domain.name, file-system, package, version and release. Each word is a placeholder, either for text you enter when issuing a command or for text displayed by the system."
 msgstr "Observe as palavras acima em negrito e itálicas &mdash; username, domain.name, file-system, package, version e release. Cada palavra pode ser substituída, tanto por texto que se insere quando se executa um comando ou por texto que é mostrado pelo sistema."
 
 #. Tag: para
