--- a/publican/datadir/Common_Content/common/sk-SK/Conventions.po
+++ b/publican/datadir/Common_Content/common/sk-SK/Conventions.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Publican\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2010-09-28T06:49:34\n"
+"POT-Creation-Date: 2010-09-29T05:30:03\n"
 "PO-Revision-Date: 2009-05-11 08:28+0200\n"
 "Last-Translator: Pavol Šimo <palo.simo@gmail.com>\n"
 "Language-Team: Slovak <sk-i18n@lists.linux.sk>\n"
@@ -105,7 +105,7 @@ msgstr "Z hlavnej ponuky si zvoľte <guimenu>Systém > Predvoľby > Myš</guimen
 
 #. Tag: para
 #, fuzzy, no-c-format
-msgid "To insert a special character into a <application>gedit</application> file, choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</guisubmenu><guimenuitem>Character Map</guimenuitem></menuchoice> from the main menu bar. Next, choose <menuchoice><guimenu>Search</guimenu><guimenuitem>Find&amp;hellip;</guimenuitem></menuchoice> from the <application>Character Map</application> menu bar, type the name of the character in the <guilabel>Search</guilabel> field and click <guibutton>Next</guibutton>. The character you sought will be highlighted in the <guilabel>Character Table</guilabel>. Double-click this highlighted character to place it in the <guilabel>Text to copy</guilabel> field and then click the <guibutton>Copy</guibutton> button. Now switch back to your document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
+msgid "To insert a special character into a <application>gedit</application> file, choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</guisubmenu><guimenuitem>Character Map</guimenuitem></menuchoice> from the main menu bar. Next, choose <menuchoice><guimenu>Search</guimenu><guimenuitem>Find&hellip;</guimenuitem></menuchoice> from the <application>Character Map</application> menu bar, type the name of the character in the <guilabel>Search</guilabel> field and click <guibutton>Next</guibutton>. The character you sought will be highlighted in the <guilabel>Character Table</guilabel>. Double-click this highlighted character to place it in the <guilabel>Text to copy</guilabel> field and then click the <guibutton>Copy</guibutton> button. Now switch back to your document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
 msgstr "Na vloženie špeciálneho znaku do súboru v <application>gedit</application> si z hlavnej ponuky zvoľte <guimenu>Aplikácie > Príslušenstvo > Mapa znakov</guimenu>. Ďalej si z ponuky aplikácie <application>Mapa znakov</application> zvoľte <guimenu>Hľadať > Nájsť</guimenu>, zadajte názov znaku do políčka <guilabel>Hľadať</guilabel> a kliknite na tlačidlo <guibutton>Nasledujúce</guibutton>. Hľadaný znak bude vyznačený v <guilabel>Tabuľke znakov</guilabel>. Dvojklikom na zvýraznený znak sa tento prenesie do políčka <guilabel>Text na kopírovanie</guilabel> a potom kliknite na tlačidlo <guibutton>Kopírovať</guibutton>. Teraz sa prepnite späť do vášho dokumentu a zvoľte <guimenu>Upraviť > Vložiť</guimenu> z ponuky aplikácie <application>gedit</application>."
 
 #. Tag: para
@@ -140,7 +140,7 @@ msgstr "Na zistenie verzie nainštalovaného balíčka použite príkaz <command
 
 #. Tag: para
 #, fuzzy, no-c-format
-msgid "Note the words in bold italics above &amp;mdash; username, domain.name, file-system, package, version and release. Each word is a placeholder, either for text you enter when issuing a command or for text displayed by the system."
+msgid "Note the words in bold italics above &mdash; username, domain.name, file-system, package, version and release. Each word is a placeholder, either for text you enter when issuing a command or for text displayed by the system."
 msgstr "Všimnite si slová uvedené tučným písmom a kurzívou &mdash; používateľské_meno, názov.domény, súborový-systém, balíček, verzia, vydanie. Každé z týchto slov je zástupné, či už pre text, ktorý zadáte pri zápise príkazu, alebo text zobrazený systémom."
 
 #. Tag: para
