--- a/publican/datadir/Common_Content/common/zh-CN/Conventions.po
+++ b/publican/datadir/Common_Content/common/zh-CN/Conventions.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Conventions\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2010-09-28T06:49:34\n"
+"POT-Creation-Date: 2010-09-29T05:30:03\n"
 "PO-Revision-Date: 2009-12-02 21:25+1000\n"
 "Last-Translator: Leah Liu <lliu@redhat.com>\n"
 "Language-Team: Simplified Chinese <zh@li.org>\n"
@@ -106,7 +106,7 @@ msgstr "在主菜单条中选择<menuchoice><guimenu>「系统」</guimenu><guis
 
 #. Tag: para
 #, fuzzy, no-c-format
-msgid "To insert a special character into a <application>gedit</application> file, choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</guisubmenu><guimenuitem>Character Map</guimenuitem></menuchoice> from the main menu bar. Next, choose <menuchoice><guimenu>Search</guimenu><guimenuitem>Find&amp;hellip;</guimenuitem></menuchoice> from the <application>Character Map</application> menu bar, type the name of the character in the <guilabel>Search</guilabel> field and click <guibutton>Next</guibutton>. The character you sought will be highlighted in the <guilabel>Character Table</guilabel>. Double-click this highlighted character to place it in the <guilabel>Text to copy</guilabel> field and then click the <guibutton>Copy</guibutton> button. Now switch back to your document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
+msgid "To insert a special character into a <application>gedit</application> file, choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</guisubmenu><guimenuitem>Character Map</guimenuitem></menuchoice> from the main menu bar. Next, choose <menuchoice><guimenu>Search</guimenu><guimenuitem>Find&hellip;</guimenuitem></menuchoice> from the <application>Character Map</application> menu bar, type the name of the character in the <guilabel>Search</guilabel> field and click <guibutton>Next</guibutton>. The character you sought will be highlighted in the <guilabel>Character Table</guilabel>. Double-click this highlighted character to place it in the <guilabel>Text to copy</guilabel> field and then click the <guibutton>Copy</guibutton> button. Now switch back to your document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
 msgstr "要在 <application>gedit</application> 文件中插入一个特殊字符，请在主菜单中选择<menuchoice><guimenu>「应用程序」</guimenu><guisubmenu>「附件」</guisubmenu><guimenuitem>「字符映射表」</guimenuitem></menuchoice>。下一步在 <application>字符映射表</application>菜单条中选择<menuchoice><guimenu>「搜索」</guimenu><guimenuitem>「查找」</guimenuitem></menuchoice>，在<guilabel>「搜索」</guilabel>字段输入字符名称并点击 <guibutton>下一个</guibutton> 按钮。您输入的字符会在<guilabel>「字符表」</guilabel>中突出出来。双击这个突出的字符将其放入<guilabel>「要复制的文本」</guilabel>字段，然后点击 <guibutton>复制</guibutton> 按钮。现在切换回您的文档并在 <application>gedit</application> 菜单条中选择<menuchoice><guimenu>「编辑」</guimenu><guimenuitem>「粘贴」</guimenuitem></menuchoice>。"
 
 #. Tag: para
@@ -141,7 +141,7 @@ msgstr "要查看目前安装的软件包版本，请使用 <command>rpm -q <rep
 
 #. Tag: para
 #, fuzzy, no-c-format
-msgid "Note the words in bold italics above &amp;mdash; username, domain.name, file-system, package, version and release. Each word is a placeholder, either for text you enter when issuing a command or for text displayed by the system."
+msgid "Note the words in bold italics above &mdash; username, domain.name, file-system, package, version and release. Each word is a placeholder, either for text you enter when issuing a command or for text displayed by the system."
 msgstr "请注意以上文字中的粗斜体字 &mdash; username、domain.name、file-system、package、version 和 release。无论您输入文本或者运行一个命令，还是该系统显示的文本，每个字都是一个占位符。"
 
 #. Tag: para
