--- a/publican/datadir/Common_Content/common/da-DK/Conventions.po
+++ b/publican/datadir/Common_Content/common/da-DK/Conventions.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: conventions\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2010-09-28T06:49:34\n"
+"POT-Creation-Date: 2010-09-29T05:30:03\n"
 "PO-Revision-Date: 2010-05-31 10:38+0100\n"
 "Last-Translator: Kris Thomsen <lakristho@gmail.com>\n"
 "Language-Team: Danish <dansk@dansk-gruppen.dk>\n"
@@ -105,7 +105,7 @@ msgstr "Vælg <menuchoice><guimenu>System</guimenu><guisubmenu>Indstillinger</gu
 
 #. Tag: para
 #, fuzzy, no-c-format
-msgid "To insert a special character into a <application>gedit</application> file, choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</guisubmenu><guimenuitem>Character Map</guimenuitem></menuchoice> from the main menu bar. Next, choose <menuchoice><guimenu>Search</guimenu><guimenuitem>Find&amp;hellip;</guimenuitem></menuchoice> from the <application>Character Map</application> menu bar, type the name of the character in the <guilabel>Search</guilabel> field and click <guibutton>Next</guibutton>. The character you sought will be highlighted in the <guilabel>Character Table</guilabel>. Double-click this highlighted character to place it in the <guilabel>Text to copy</guilabel> field and then click the <guibutton>Copy</guibutton> button. Now switch back to your document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
+msgid "To insert a special character into a <application>gedit</application> file, choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</guisubmenu><guimenuitem>Character Map</guimenuitem></menuchoice> from the main menu bar. Next, choose <menuchoice><guimenu>Search</guimenu><guimenuitem>Find&hellip;</guimenuitem></menuchoice> from the <application>Character Map</application> menu bar, type the name of the character in the <guilabel>Search</guilabel> field and click <guibutton>Next</guibutton>. The character you sought will be highlighted in the <guilabel>Character Table</guilabel>. Double-click this highlighted character to place it in the <guilabel>Text to copy</guilabel> field and then click the <guibutton>Copy</guibutton> button. Now switch back to your document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
 msgstr "For at indsætte et specielt tegn i en <application>gedit</application>-fil, vælg <menuchoice><guimenu>Programmer</guimenu><guisubmenu>Tilbehør</guisubmenu><guimenuitem>Tegnoversigt</guimenuitem></menuchoice> fra hovedmenuen. Derefter skal du vælge <menuchoice><guimenu>Find</guimenu><guimenuitem>Find</guimenuitem></menuchoice> fra <application>Tegnoversigt</application>-menuen, indtast navnet på tegnet i <guilabel>Find</guilabel>-feltet og tryk <guibutton>Næste</guibutton>. Tegnet du søgte efter vil blive fremhævet i <guilabel>Tegntabellen</guilabel>. Dobbeltklik  på dette fremhævede tegn for at placere det i <guilabel>Tekst at kopiere</guilabel>-feltet og derefter trykke på <guibutton>Kopiér</guibutton>-knappen. Skift nu tilbage til dit dokument og vælg <menuchoice><guimenu>Redigér</guimenu><guimenuitem>Indsæt</guimenuitem></menuchoice> fra <application>gedit</application>-menuen."
 
 #. Tag: para
@@ -140,7 +140,7 @@ msgstr "For at se versionen af en installeret pakke, skal du bruge <command>rpm 
 
 #. Tag: para
 #, fuzzy, no-c-format
-msgid "Note the words in bold italics above &amp;mdash; username, domain.name, file-system, package, version and release. Each word is a placeholder, either for text you enter when issuing a command or for text displayed by the system."
+msgid "Note the words in bold italics above &mdash; username, domain.name, file-system, package, version and release. Each word is a placeholder, either for text you enter when issuing a command or for text displayed by the system."
 msgstr "Bemærk at ordene i fed kursiv ovenfor &mdash; brugernavn, domæne.navn, filsystem, pakke, version og udgivelse. Hvert ord er en pladsholder, enten for tekst du indtaster når du kører en kommando eller for tekst vist af systemet."
 
 #. Tag: para
