--- a/publican/datadir/Common_Content/common/fi-FI/Conventions.po
+++ b/publican/datadir/Common_Content/common/fi-FI/Conventions.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Conventions\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2010-09-28T06:49:34\n"
+"POT-Creation-Date: 2010-09-29T05:30:03\n"
 "PO-Revision-Date: 2009-09-04 00:12+0300\n"
 "Last-Translator: Ville-Pekka Vainio <vpivaini@cs.helsinki.fi>\n"
 "Language-Team: Finnish <laatu@lokalisointi.org>\n"
@@ -105,7 +105,7 @@ msgstr "Valitse <guimenu>Järjestelmä > Asetukset > Hiiri</guimenu> valikkopalk
 
 #. Tag: para
 #, fuzzy, no-c-format
-msgid "To insert a special character into a <application>gedit</application> file, choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</guisubmenu><guimenuitem>Character Map</guimenuitem></menuchoice> from the main menu bar. Next, choose <menuchoice><guimenu>Search</guimenu><guimenuitem>Find&amp;hellip;</guimenuitem></menuchoice> from the <application>Character Map</application> menu bar, type the name of the character in the <guilabel>Search</guilabel> field and click <guibutton>Next</guibutton>. The character you sought will be highlighted in the <guilabel>Character Table</guilabel>. Double-click this highlighted character to place it in the <guilabel>Text to copy</guilabel> field and then click the <guibutton>Copy</guibutton> button. Now switch back to your document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
+msgid "To insert a special character into a <application>gedit</application> file, choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</guisubmenu><guimenuitem>Character Map</guimenuitem></menuchoice> from the main menu bar. Next, choose <menuchoice><guimenu>Search</guimenu><guimenuitem>Find&hellip;</guimenuitem></menuchoice> from the <application>Character Map</application> menu bar, type the name of the character in the <guilabel>Search</guilabel> field and click <guibutton>Next</guibutton>. The character you sought will be highlighted in the <guilabel>Character Table</guilabel>. Double-click this highlighted character to place it in the <guilabel>Text to copy</guilabel> field and then click the <guibutton>Copy</guibutton> button. Now switch back to your document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
 msgstr "Erikoismerkin lisäämiseksi <application>gedit</application>-tiedostoon valitse <guimenu>Sovellukset > Apuohjelmat > Merkkikartta</guimenu> valikkopalkista. Valitse seuraavaksi <guimenu>Etsi > Etsi&hellip;</guimenu> <application>Merkkikartta</application>-ohjelman valikkopalkista, kirjoita merkin nimi <guilabel>Etsi</guilabel>-kenttään ja napsauta <guibutton>Seuraava</guibutton>. Etsimäsi merkki korostetaan <guilabel>Merkkikartassa</guilabel>. Kaksoisnapsauta korostettua merkkiä, jolloin se siirtyy <guilabel>Kopioitava teksti</guilabel> -kenttään ja napsauta sitten <guibutton>Kopioi</guibutton>-painiketta. Vaihda nyt takaisin asiakirjaan ja valitse <guimenu>Muokkaa > Liitä</guimenu> <application>geditin</application> valikkopalkista."
 
 #. Tag: para
@@ -140,7 +140,7 @@ msgstr "Asennetun paketin version näkee komennolla <command>rpm -q <replaceable
 
 #. Tag: para
 #, fuzzy, no-c-format
-msgid "Note the words in bold italics above &amp;mdash; username, domain.name, file-system, package, version and release. Each word is a placeholder, either for text you enter when issuing a command or for text displayed by the system."
+msgid "Note the words in bold italics above &mdash; username, domain.name, file-system, package, version and release. Each word is a placeholder, either for text you enter when issuing a command or for text displayed by the system."
 msgstr "Huomaa yllä olevat lihavoidulla kursiivilla kirjoitetut sanat: käyttäjätunnus, verkko.osoite, tiedostojärjestelmä, paketti, versio ja julkaisu. Jokainen sana on niin sanottu paikkamerkki, joka merkitsee joko paikkaa, johon tekstiä syötetään komentoa annettaessa tai järjestelmän näyttämää tekstiä."
 
 #. Tag: para
