--- a/publican/datadir/Common_Content/common/fr-FR/Conventions.po
+++ b/publican/datadir/Common_Content/common/fr-FR/Conventions.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Conventions\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2010-09-28T06:49:34\n"
+"POT-Creation-Date: 2010-09-29T05:30:03\n"
 "PO-Revision-Date: 2009-12-04 16:52+1000\n"
 "Last-Translator: Sam Friedmann <sam.friedmann@redhat.com>\n"
 "Language-Team: French <fr@li.org>\n"
@@ -107,7 +107,7 @@ msgstr "Sélectionner <menuchoice><guimenu>System</guimenu><guisubmenu>Preferenc
 
 #. Tag: para
 #, fuzzy, no-c-format
-msgid "To insert a special character into a <application>gedit</application> file, choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</guisubmenu><guimenuitem>Character Map</guimenuitem></menuchoice> from the main menu bar. Next, choose <menuchoice><guimenu>Search</guimenu><guimenuitem>Find&amp;hellip;</guimenuitem></menuchoice> from the <application>Character Map</application> menu bar, type the name of the character in the <guilabel>Search</guilabel> field and click <guibutton>Next</guibutton>. The character you sought will be highlighted in the <guilabel>Character Table</guilabel>. Double-click this highlighted character to place it in the <guilabel>Text to copy</guilabel> field and then click the <guibutton>Copy</guibutton> button. Now switch back to your document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
+msgid "To insert a special character into a <application>gedit</application> file, choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</guisubmenu><guimenuitem>Character Map</guimenuitem></menuchoice> from the main menu bar. Next, choose <menuchoice><guimenu>Search</guimenu><guimenuitem>Find&hellip;</guimenuitem></menuchoice> from the <application>Character Map</application> menu bar, type the name of the character in the <guilabel>Search</guilabel> field and click <guibutton>Next</guibutton>. The character you sought will be highlighted in the <guilabel>Character Table</guilabel>. Double-click this highlighted character to place it in the <guilabel>Text to copy</guilabel> field and then click the <guibutton>Copy</guibutton> button. Now switch back to your document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
 msgstr "Pour insérer un caractère spécial dans un fichier <application>gedit</application>, choisir <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</guisubmenu><guimenuitem>Character Map</guimenuitem></menuchoice> à partir de la barre du menu principal. Ensuite, sélectionner <menuchoice><guimenu>Search</guimenu><guimenuitem> Find&hellip;</guimenuitem></menuchoice> à partir de la barre de menu <application>Character Map</application>, taper le nom du caractère dans le champ <guilabel>Search</guilabel> et cliquer sur <guibutton>Next</guibutton>. Le caractère que vous cherchiez sera surligné dans la <guilabel>Character Map</guilabel> (Table de caractères). Double-cliquez sur ce caractère surligné pour l'insérer dans le champ <guilabel>Text to copy</guilabel> (texte à copier), puis cliquer sur le bouton <guibutton>Copy</guibutton> (copier) . Maintenant, revenez à votre document, et sélectionnez <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice> à partir de la barre de menu <application>gedit</application>."
 
 #. Tag: para
@@ -142,7 +142,7 @@ msgstr "Pour voir la version d'un package actuellement installé, utiliser la co
 
 #. Tag: para
 #, fuzzy, no-c-format
-msgid "Note the words in bold italics above &amp;mdash; username, domain.name, file-system, package, version and release. Each word is a placeholder, either for text you enter when issuing a command or for text displayed by the system."
+msgid "Note the words in bold italics above &mdash; username, domain.name, file-system, package, version and release. Each word is a placeholder, either for text you enter when issuing a command or for text displayed by the system."
 msgstr "Notez les mots en caractères italique gras au dessus de &mdash; nom d'utilisateur, domain.name, système fichier, package, version et mise à jour. Chaque mot est un signet, soit pour le texte que vous saisissez suite à l'activation d'une commande, soit pour le texte affiché par le système."
 
 #. Tag: para
