--- a/publican/datadir/Common_Content/common/hu-HU/Conventions.po
+++ b/publican/datadir/Common_Content/common/hu-HU/Conventions.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Conventions\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2010-09-28T06:49:34\n"
+"POT-Creation-Date: 2010-09-29T05:30:03\n"
 "PO-Revision-Date: 2009-04-07 20:23+0200\n"
 "Last-Translator: Sulyok Péter <peti@fedoraproject.org>\n"
 "Language-Team: Hungarian <fedora-trans-hu@redhat.com>\n"
@@ -105,7 +105,7 @@ msgstr "Válassza a fő menü <guimenu>Rendszer &gt; Beállítások &gt; Egér</
 
 #. Tag: para
 #, fuzzy, no-c-format
-msgid "To insert a special character into a <application>gedit</application> file, choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</guisubmenu><guimenuitem>Character Map</guimenuitem></menuchoice> from the main menu bar. Next, choose <menuchoice><guimenu>Search</guimenu><guimenuitem>Find&amp;hellip;</guimenuitem></menuchoice> from the <application>Character Map</application> menu bar, type the name of the character in the <guilabel>Search</guilabel> field and click <guibutton>Next</guibutton>. The character you sought will be highlighted in the <guilabel>Character Table</guilabel>. Double-click this highlighted character to place it in the <guilabel>Text to copy</guilabel> field and then click the <guibutton>Copy</guibutton> button. Now switch back to your document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
+msgid "To insert a special character into a <application>gedit</application> file, choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</guisubmenu><guimenuitem>Character Map</guimenuitem></menuchoice> from the main menu bar. Next, choose <menuchoice><guimenu>Search</guimenu><guimenuitem>Find&hellip;</guimenuitem></menuchoice> from the <application>Character Map</application> menu bar, type the name of the character in the <guilabel>Search</guilabel> field and click <guibutton>Next</guibutton>. The character you sought will be highlighted in the <guilabel>Character Table</guilabel>. Double-click this highlighted character to place it in the <guilabel>Text to copy</guilabel> field and then click the <guibutton>Copy</guibutton> button. Now switch back to your document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
 msgstr "Különleges jelek <application>gedit</application> fájlba beszúrásához válassza az <guimenu>Alkalmazások &gt; Kellékek &gt; Karaktertábla</guimenu> menüpontot. Majd válassza a <application>Karaktertábla</application> menüjéből a <guimenu>Keresés &gt; Keresés&hellip;</guimenu> pontot. Gépelje be a jel nevét a <guilabel>Keresés</guilabel> mezőbe, és kattintson a <guibutton>Következő</guibutton> gombra. A keresett jelet a <guilabel>Karaktertábla</guilabel> kiemeléssel jelöli. Duplán kattintva e kiemelt jelre a <guilabel>Másolandó szöveg</guilabel> mezőbe kerül. Kattintson a <guibutton>Másolás</guibutton> gombra. Váltson vissza az iratra, és válassza a <application>gedit</application> menüjéből a <guimenu>Szerkesztés &gt; Beillesztés</guimenu> pontot."
 
 #. Tag: para
@@ -140,7 +140,7 @@ msgstr "Az éppen telepített csomag változat számát megtekintendő, használ
 
 #. Tag: para
 #, fuzzy, no-c-format
-msgid "Note the words in bold italics above &amp;mdash; username, domain.name, file-system, package, version and release. Each word is a placeholder, either for text you enter when issuing a command or for text displayed by the system."
+msgid "Note the words in bold italics above &mdash; username, domain.name, file-system, package, version and release. Each word is a placeholder, either for text you enter when issuing a command or for text displayed by the system."
 msgstr "Vegye észre a fenti dőlt félkövér szavakat: használó, tartomány.neve, fájlrendszer, csomag, változat és kiadás. Minden szó egy helyettes. Vagy parancs kiadása során begépelendő, vagy a rendszer által megjelenített szöveg."
 
 #. Tag: para
