--- a/publican/datadir/Common_Content/common/nb-NO/Conventions.po
+++ b/publican/datadir/Common_Content/common/nb-NO/Conventions.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Conventions\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2010-09-28T06:49:34\n"
+"POT-Creation-Date: 2010-09-29T05:30:03\n"
 "PO-Revision-Date: 2010-04-05 04:51+0200\n"
 "Last-Translator: Sindre Wetjen <sindre.w@gmail.com>\n"
 "Language-Team: Norwegian <i18n-no@lister.ping.uio.no>\n"
@@ -105,7 +105,7 @@ msgstr "Velg <menuchoice><guimenu>System</guimenu><guisubmenu>Brukervalg</guisub
 
 #. Tag: para
 #, fuzzy, no-c-format
-msgid "To insert a special character into a <application>gedit</application> file, choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</guisubmenu><guimenuitem>Character Map</guimenuitem></menuchoice> from the main menu bar. Next, choose <menuchoice><guimenu>Search</guimenu><guimenuitem>Find&amp;hellip;</guimenuitem></menuchoice> from the <application>Character Map</application> menu bar, type the name of the character in the <guilabel>Search</guilabel> field and click <guibutton>Next</guibutton>. The character you sought will be highlighted in the <guilabel>Character Table</guilabel>. Double-click this highlighted character to place it in the <guilabel>Text to copy</guilabel> field and then click the <guibutton>Copy</guibutton> button. Now switch back to your document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
+msgid "To insert a special character into a <application>gedit</application> file, choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</guisubmenu><guimenuitem>Character Map</guimenuitem></menuchoice> from the main menu bar. Next, choose <menuchoice><guimenu>Search</guimenu><guimenuitem>Find&hellip;</guimenuitem></menuchoice> from the <application>Character Map</application> menu bar, type the name of the character in the <guilabel>Search</guilabel> field and click <guibutton>Next</guibutton>. The character you sought will be highlighted in the <guilabel>Character Table</guilabel>. Double-click this highlighted character to place it in the <guilabel>Text to copy</guilabel> field and then click the <guibutton>Copy</guibutton> button. Now switch back to your document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
 msgstr "For å sette spesialtegn inn i ei <application>gedit</application> fil, velg <menuchoice><guimenu>Programmer</guimenu><guisubmenu>Tilbehør</guisubmenu><guimenuitem>Tegnkart</guimenuitem></menuchoice> ifra hovedmenylinja. Så velger du <menuchoice><guimenu>Søk</guimenu><guimenuitem>Finn</guimenuitem></menuchoice> fra <application>Tegnkart</application> menylinja, skriv navnet på tegnet i <guilabel>Søk:</guilabel> feltet og trykk <guibutton>Neste</guibutton>. Tegnet du søkte etter vil bli fremhevet i <guilabel>Tegntabellen</guilabel>.Dobbeltklikk på det fremhevete tegnet for å plassere det i <guilabel>Tekst som skal kopieres</guilabel> feltet og trykk på <guibutton>Kopier</guibutton> knappen. Nå går du tilbake til dokumentet ditt og velger <menuchoice><guimenu>Rediger</guimenu><guimenuitem>Lim inn</guimenuitem></menuchoice> fra menylinja til <application>gedit</application>"
 
 #. Tag: para
@@ -140,7 +140,7 @@ msgstr "For å se hvilken versjon en installert pakke er i, bruk <command>rpm -q
 
 #. Tag: para
 #, fuzzy, no-c-format
-msgid "Note the words in bold italics above &amp;mdash; username, domain.name, file-system, package, version and release. Each word is a placeholder, either for text you enter when issuing a command or for text displayed by the system."
+msgid "Note the words in bold italics above &mdash; username, domain.name, file-system, package, version and release. Each word is a placeholder, either for text you enter when issuing a command or for text displayed by the system."
 msgstr "Legg merke til at ordene ovenfor i fet kursiv &mdash; brukernavn, domenenavn filsystem, pakke, versjon og utgivelse. Hvert ord isteden for noe annet, enten for tekst du skal skrive inn når du du skal kjøre kommandoen eller for tekst som skal vises av systemet."
 
 #. Tag: para
