--- a/publican/datadir/Common_Content/common/nl-NL/Conventions.po
+++ b/publican/datadir/Common_Content/common/nl-NL/Conventions.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Conventions-nl.po\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2010-09-28T06:49:34\n"
+"POT-Creation-Date: 2010-09-29T05:30:03\n"
 "PO-Revision-Date: 2010-07-14 20:29+0200\n"
 "Last-Translator: Geert Warrink <geert.warrink@onsnet.nu>\n"
 "Language-Team: Fedora\n"
@@ -108,7 +108,7 @@ msgstr "Kies <menuchoice><guimenu>Systeem</guimenu><guisubmenu>Voorkeuren</guisu
 
 #. Tag: para
 #, fuzzy, no-c-format
-msgid "To insert a special character into a <application>gedit</application> file, choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</guisubmenu><guimenuitem>Character Map</guimenuitem></menuchoice> from the main menu bar. Next, choose <menuchoice><guimenu>Search</guimenu><guimenuitem>Find&amp;hellip;</guimenuitem></menuchoice> from the <application>Character Map</application> menu bar, type the name of the character in the <guilabel>Search</guilabel> field and click <guibutton>Next</guibutton>. The character you sought will be highlighted in the <guilabel>Character Table</guilabel>. Double-click this highlighted character to place it in the <guilabel>Text to copy</guilabel> field and then click the <guibutton>Copy</guibutton> button. Now switch back to your document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
+msgid "To insert a special character into a <application>gedit</application> file, choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</guisubmenu><guimenuitem>Character Map</guimenuitem></menuchoice> from the main menu bar. Next, choose <menuchoice><guimenu>Search</guimenu><guimenuitem>Find&hellip;</guimenuitem></menuchoice> from the <application>Character Map</application> menu bar, type the name of the character in the <guilabel>Search</guilabel> field and click <guibutton>Next</guibutton>. The character you sought will be highlighted in the <guilabel>Character Table</guilabel>. Double-click this highlighted character to place it in the <guilabel>Text to copy</guilabel> field and then click the <guibutton>Copy</guibutton> button. Now switch back to your document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
 msgstr "Om een speciaal teken in een <application>gedit</application> bestand op te nemen, kies je <menuchoice><guimenu>Toepassingen</guimenu><guisubmenu>Hulpmiddelen</guisubmenu><guimenuitem>Tekens en symbolen</guimenuitem></menuchoice> in de hoofd menubalk. Vervolgens kies je <menuchoice><guimenu>Zoeken</guimenu><guimenuitem>Zoeken&hellip;</guimenuitem></menuchoice> in de <application>Tekens en symbolen</application> menubalk, typ je de naam van het teken in het <guilabel>Zoek</guilabel> veld en klik je op <guibutton>Volgende</guibutton>. Het teken dat je zoekt zal worden gemarkeerd in de <guilabel>Tekentabel</guilabel>. Dubbel-klik op dit teken om het in het <guilabel>Te kopiëren tekst</guilabel> veld op te nemen en klik dan de <guibutton>Kopiëren</guibutton> knop. Keer nu terug naar jouw document en kies <menuchoice><guimenu>Bewerken </guimenu><guimenuitem>Plakken</guimenuitem></menuchoice> in de <application>gedit</application> menubalk."
 
 #. Tag: para
@@ -143,7 +143,7 @@ msgstr "Om de versie van een huidig geïnstalleerd pakket te zien, gebruik je he
 
 #. Tag: para
 #, fuzzy, no-c-format
-msgid "Note the words in bold italics above &amp;mdash; username, domain.name, file-system, package, version and release. Each word is a placeholder, either for text you enter when issuing a command or for text displayed by the system."
+msgid "Note the words in bold italics above &mdash; username, domain.name, file-system, package, version and release. Each word is a placeholder, either for text you enter when issuing a command or for text displayed by the system."
 msgstr "Let op de woorden in bold italics in bovenstaande tekst &mdash; gebruikersnaam, domein.naam, bestandssysteem, pakket, versie en vrijgave. Elk woord is een plaats reservering, hetzij voor tekst die je invult als je een commando typt, hetzij voor tekst die door het systeem wordt getoond."
 
 #. Tag: para
