--- a/publican/datadir/Common_Content/common/pl-PL/Conventions.po
+++ b/publican/datadir/Common_Content/common/pl-PL/Conventions.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: pl\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2010-09-28T06:49:34\n"
+"POT-Creation-Date: 2010-09-29T05:30:03\n"
 "PO-Revision-Date: 2009-12-04 20:27+0100\n"
 "Last-Translator: Piotr Drąg <piotrdrag@gmail.com>\n"
 "Language-Team: Polish <fedora-trans-pl@redhat.com>\n"
@@ -105,7 +105,7 @@ msgstr "Proszę wybrać <menuchoice><guimenu>System</guimenu><guisubmenu>Prefere
 
 #. Tag: para
 #, fuzzy, no-c-format
-msgid "To insert a special character into a <application>gedit</application> file, choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</guisubmenu><guimenuitem>Character Map</guimenuitem></menuchoice> from the main menu bar. Next, choose <menuchoice><guimenu>Search</guimenu><guimenuitem>Find&amp;hellip;</guimenuitem></menuchoice> from the <application>Character Map</application> menu bar, type the name of the character in the <guilabel>Search</guilabel> field and click <guibutton>Next</guibutton>. The character you sought will be highlighted in the <guilabel>Character Table</guilabel>. Double-click this highlighted character to place it in the <guilabel>Text to copy</guilabel> field and then click the <guibutton>Copy</guibutton> button. Now switch back to your document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
+msgid "To insert a special character into a <application>gedit</application> file, choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</guisubmenu><guimenuitem>Character Map</guimenuitem></menuchoice> from the main menu bar. Next, choose <menuchoice><guimenu>Search</guimenu><guimenuitem>Find&hellip;</guimenuitem></menuchoice> from the <application>Character Map</application> menu bar, type the name of the character in the <guilabel>Search</guilabel> field and click <guibutton>Next</guibutton>. The character you sought will be highlighted in the <guilabel>Character Table</guilabel>. Double-click this highlighted character to place it in the <guilabel>Text to copy</guilabel> field and then click the <guibutton>Copy</guibutton> button. Now switch back to your document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
 msgstr "Aby umieścić specjalny znak w pliku programu <application>gedit</application>, należy wybrać <menuchoice><guimenu>Programy</guimenu><guisubmenu>Akcesoria</guisubmenu><guimenuitem>Mapa znaków</guimenuitem></menuchoice> z głównego menu panelu. Następnie należy wybrać <menuchoice><guimenu>Znajdź</guimenu><guimenuitem>Znajdź&hellip;</guimenuitem></menuchoice> z paska menu <application>Mapy znaków</application>, podać nazwę znaku w polu <guilabel>Znajdź</guilabel> i nacisnąć przycisk <guibutton>Dalej</guibutton>. Wyszukiwany znak zostanie wyróżniony w <guilabel>Tablicy znaków</guilabel>. Podwójne naciśnięcie wyróżnionego znaku umieści go w polu <guilabel>Tekst do skopiowania</guilabel>. Następnie należy nacisnąć przycisk <guibutton>Skopiuj</guibutton>. Teraz należy przełączyć się z powrotem na dokument i wybrać <menuchoice><guimenu>Edycja</guimenu><guimenuitem>Wklej</guimenuitem></menuchoice> z paska menu programu <application>gedit</application>."
 
 #. Tag: para
@@ -140,7 +140,7 @@ msgstr "Aby zobaczyć wersję obecnie zainstalowanego pakietu, należy użyć po
 
 #. Tag: para
 #, fuzzy, no-c-format
-msgid "Note the words in bold italics above &amp;mdash; username, domain.name, file-system, package, version and release. Each word is a placeholder, either for text you enter when issuing a command or for text displayed by the system."
+msgid "Note the words in bold italics above &mdash; username, domain.name, file-system, package, version and release. Each word is a placeholder, either for text you enter when issuing a command or for text displayed by the system."
 msgstr "Proszę zauważyć powyżej pogrubione i pochylone słowa &mdash; nazwa_użytkownika, nazwa.domeny, system-plików, pakiet, wersja i wydanie. Każde słowo zostanie zastąpione przez tekst podany przez użytkownika podczas wpisywania polecenia lub przez tekst wyświetlany przez system."
 
 #. Tag: para
