--- a/publican/datadir/Common_Content/common/pt-BR/Conventions.po
+++ b/publican/datadir/Common_Content/common/pt-BR/Conventions.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Conventions\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2010-09-28T06:49:34\n"
+"POT-Creation-Date: 2010-09-29T05:30:03\n"
 "PO-Revision-Date: 2009-12-04 09:41+1000\n"
 "Last-Translator: Glaucia Cintra <gcintra@redhat.com>\n"
 "Language-Team: Portuguese <en@li.org>\n"
@@ -106,7 +106,7 @@ msgstr "Escolha <menuchoice><guimenu>Sistema </guimenu><guisubmenu> Preferência
 
 #. Tag: para
 #, fuzzy, no-c-format
-msgid "To insert a special character into a <application>gedit</application> file, choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</guisubmenu><guimenuitem>Character Map</guimenuitem></menuchoice> from the main menu bar. Next, choose <menuchoice><guimenu>Search</guimenu><guimenuitem>Find&amp;hellip;</guimenuitem></menuchoice> from the <application>Character Map</application> menu bar, type the name of the character in the <guilabel>Search</guilabel> field and click <guibutton>Next</guibutton>. The character you sought will be highlighted in the <guilabel>Character Table</guilabel>. Double-click this highlighted character to place it in the <guilabel>Text to copy</guilabel> field and then click the <guibutton>Copy</guibutton> button. Now switch back to your document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
+msgid "To insert a special character into a <application>gedit</application> file, choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</guisubmenu><guimenuitem>Character Map</guimenuitem></menuchoice> from the main menu bar. Next, choose <menuchoice><guimenu>Search</guimenu><guimenuitem>Find&hellip;</guimenuitem></menuchoice> from the <application>Character Map</application> menu bar, type the name of the character in the <guilabel>Search</guilabel> field and click <guibutton>Next</guibutton>. The character you sought will be highlighted in the <guilabel>Character Table</guilabel>. Double-click this highlighted character to place it in the <guilabel>Text to copy</guilabel> field and then click the <guibutton>Copy</guibutton> button. Now switch back to your document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
 msgstr "Para inserir um caractere especial em um arquivo <application>gedit</application>, escolha <menuchoice><guimenu>Aplicativos</guimenu><guisubmenu> Acessórios</guisubmenu><guimenuitem> Mapa de Caracteres</guimenuitem></menuchoice>a partir da barra de menu principal. Depois, escolha a opção<menuchoice><guimenu>Pesquisar</guimenu><guimenuitem> Encontrar&hellip;</guimenuitem></menuchoice>a partir da barra de menu <application>Mapa de Caracteres </application>, digite o nome do caractere no campo <guilabel>Pesquisar</guilabel> e clique em <guibutton>Próximo</guibutton>. O caractere que você buscou estará em destaque na <guilabel>Tabela de Caracteres</guilabel>. Clique novamente nestes caracteres realçados para colocá-los no campo <guilabel>Texto para cópia</guilabel> e depois clique em  <guibutton>Copiar</guibutton>. Agora mude novamente para seu documento e escolha <menuchoice><guimenu>Editar</guimenu><guimenuitem> Colar</guimenuitem></menuchoice> a partir da barra de menu do <application>gedit</application>."
 
 #. Tag: para
@@ -141,7 +141,7 @@ msgstr "Para ver a versão de um pacote instalado, use o comando <command>rpm -q
 
 #. Tag: para
 #, fuzzy, no-c-format
-msgid "Note the words in bold italics above &amp;mdash; username, domain.name, file-system, package, version and release. Each word is a placeholder, either for text you enter when issuing a command or for text displayed by the system."
+msgid "Note the words in bold italics above &mdash; username, domain.name, file-system, package, version and release. Each word is a placeholder, either for text you enter when issuing a command or for text displayed by the system."
 msgstr "Observe as palavras em negrito e itálicas acima &mdash; nome de usuário, nome do domínio, sistema de arquivo, pacote, versão e lançamento. Cada palavra é um espaço reservado, tanto para o texto que você inseriu ao emitir um comando ou para o texto exibido pelo sistema."
 
 #. Tag: para
