--- a/publican/datadir/Common_Content/common/sr-Latn-RS/Conventions.po
+++ b/publican/datadir/Common_Content/common/sr-Latn-RS/Conventions.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Conventions\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2010-09-28T06:49:34\n"
+"POT-Creation-Date: 2010-09-29T05:30:03\n"
 "PO-Revision-Date: 2010-03-16 21:21+0100\n"
 "Last-Translator: Miloš Komarčević <kmilos@gmail.com>\n"
 "Language-Team: Serbian <trans-sr@lists.fedoraproject.org>\n"
@@ -106,7 +106,7 @@ msgstr "Izaberite <menuchoice><guimenu>Sistem</guimenu><guisubmenu>Postavke</gui
 
 #. Tag: para
 #, fuzzy, no-c-format
-msgid "To insert a special character into a <application>gedit</application> file, choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</guisubmenu><guimenuitem>Character Map</guimenuitem></menuchoice> from the main menu bar. Next, choose <menuchoice><guimenu>Search</guimenu><guimenuitem>Find&amp;hellip;</guimenuitem></menuchoice> from the <application>Character Map</application> menu bar, type the name of the character in the <guilabel>Search</guilabel> field and click <guibutton>Next</guibutton>. The character you sought will be highlighted in the <guilabel>Character Table</guilabel>. Double-click this highlighted character to place it in the <guilabel>Text to copy</guilabel> field and then click the <guibutton>Copy</guibutton> button. Now switch back to your document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
+msgid "To insert a special character into a <application>gedit</application> file, choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</guisubmenu><guimenuitem>Character Map</guimenuitem></menuchoice> from the main menu bar. Next, choose <menuchoice><guimenu>Search</guimenu><guimenuitem>Find&hellip;</guimenuitem></menuchoice> from the <application>Character Map</application> menu bar, type the name of the character in the <guilabel>Search</guilabel> field and click <guibutton>Next</guibutton>. The character you sought will be highlighted in the <guilabel>Character Table</guilabel>. Double-click this highlighted character to place it in the <guilabel>Text to copy</guilabel> field and then click the <guibutton>Copy</guibutton> button. Now switch back to your document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
 msgstr "Da biste umetnuli poseban znak u <application>gedit</application> datoteku, izaberite <menuchoice><guimenu>Programi</guimenu><guisubmenu>Alatke</guisubmenu><guimenuitem>Tablica znakova</guimenuitem></menuchoice> iz trake glavnog menija. Zatim, izaberite <menuchoice><guimenu>Pretraga</guimenu><guimenuitem>Nađi&hellip;</guimenuitem></menuchoice> iz menija <application>Tablice znakova</application>, unesite naziv znaka u polju <guilabel>Pretraga</guilabel> i pritisnite <guibutton>Sledeći</guibutton>. Znak koji ste tražili će biti istaknut u <guilabel>Tablici znakova</guilabel>. Pritisnite dvaput ovaj istaknuti znak kako biste ga smestili u polje <guilabel>Tekst za kopiranje</guilabel> i potom pritisnite dugme <guibutton>Umnoži</guibutton>. Sada se prebacite nazad u vaš dokument i izaberite <menuchoice><guimenu>Uređivanje</guimenu><guimenuitem>Ubaci</guimenuitem></menuchoice> iz trake <application>gedit</application> menija."
 
 #. Tag: para
@@ -141,7 +141,7 @@ msgstr "Da biste videli verziju trenutno instaliranog paketa, upotrebite naredbu
 
 #. Tag: para
 #, fuzzy, no-c-format
-msgid "Note the words in bold italics above &amp;mdash; username, domain.name, file-system, package, version and release. Each word is a placeholder, either for text you enter when issuing a command or for text displayed by the system."
+msgid "Note the words in bold italics above &mdash; username, domain.name, file-system, package, version and release. Each word is a placeholder, either for text you enter when issuing a command or for text displayed by the system."
 msgstr "Obratite pažnju na reči ispisane podebljanim kurzivnim slovima iznad &mdash; korisnik, ime.domena, sistem-datoteka, paket, verzija i izdanje. Svaka reč je čuvar mesta, bilo za tekst koji ćete uneti pri izdavanju naredbe ili za tekst kojeg prikazuje sistem."
 
 #. Tag: para
