--- a/publican/datadir/Common_Content/common/sv-SE/Conventions.po
+++ b/publican/datadir/Common_Content/common/sv-SE/Conventions.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Conventions\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2010-09-28T06:49:34\n"
+"POT-Creation-Date: 2010-09-29T05:30:03\n"
 "PO-Revision-Date: 2009-03-28 17:18+0100\n"
 "Last-Translator: Göran Uddeborg <goeran@uddeborg.se>\n"
 "Language-Team: Swedish <tp-sv@listor.tp-sv.se>\n"
@@ -106,7 +106,7 @@ msgstr "Välj <guimenu>System &gt; Inställningar &gt; Mus</guimenu> från huvud
 
 #. Tag: para
 #, fuzzy, no-c-format
-msgid "To insert a special character into a <application>gedit</application> file, choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</guisubmenu><guimenuitem>Character Map</guimenuitem></menuchoice> from the main menu bar. Next, choose <menuchoice><guimenu>Search</guimenu><guimenuitem>Find&amp;hellip;</guimenuitem></menuchoice> from the <application>Character Map</application> menu bar, type the name of the character in the <guilabel>Search</guilabel> field and click <guibutton>Next</guibutton>. The character you sought will be highlighted in the <guilabel>Character Table</guilabel>. Double-click this highlighted character to place it in the <guilabel>Text to copy</guilabel> field and then click the <guibutton>Copy</guibutton> button. Now switch back to your document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
+msgid "To insert a special character into a <application>gedit</application> file, choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</guisubmenu><guimenuitem>Character Map</guimenuitem></menuchoice> from the main menu bar. Next, choose <menuchoice><guimenu>Search</guimenu><guimenuitem>Find&hellip;</guimenuitem></menuchoice> from the <application>Character Map</application> menu bar, type the name of the character in the <guilabel>Search</guilabel> field and click <guibutton>Next</guibutton>. The character you sought will be highlighted in the <guilabel>Character Table</guilabel>. Double-click this highlighted character to place it in the <guilabel>Text to copy</guilabel> field and then click the <guibutton>Copy</guibutton> button. Now switch back to your document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
 msgstr "För att skriva in specialtecken i en <application>gedit</application>-fil, välj <guimenu>Program &gt; Tillbehör &gt; Teckentabell</guimenu> från huvudmenyraden.  Välj därefter <guimenu>Sök &gt; Sök&hellip;</guimenu> från menyraden i <application>Teckentabell</application>, skriv namnet på tecknet i fältet <guilabel>Sök</guilabel> ock klicka på knappen <guibutton>Nästa</guibutton>.  Tecknet du sökte kommer att markeras i <guilabel>Teckentabell</guilabel>.  Dubbelklicka på det markerade tecknet för att placera det i fältet <guilabel>Text att kopiera</guilabel> och klicka sedan på knappen <guibutton>Kopiera</guibutton>.  Byt nu tillbaka till ditt dokument och välj <guimenu>Redigera &gt; Klistra in</guimenu> från menyraden i <application>gedit</application>."
 
 #. Tag: para
@@ -141,7 +141,7 @@ msgstr "För att ta reda på versionen av ett installerat paket, använd kommand
 
 #. Tag: para
 #, fuzzy, no-c-format
-msgid "Note the words in bold italics above &amp;mdash; username, domain.name, file-system, package, version and release. Each word is a placeholder, either for text you enter when issuing a command or for text displayed by the system."
+msgid "Note the words in bold italics above &mdash; username, domain.name, file-system, package, version and release. Each word is a placeholder, either for text you enter when issuing a command or for text displayed by the system."
 msgstr "Observera orden i kursiv fetstil ovan &mdash; användarnamn, domän.namn, filsystem, paket, version och utgåva.  Varje ord håller en plats, antingen för text du skriver in när du skickar ett kommando eller för text som visas av systemet."
 
 #. Tag: para
